Switch URLs to HTTPS
The URL of ASF in licence text is http and therefore correct.

closes #115

--- a/src/main/resources/project-info-reports_cs.properties
+++ b/src/main/resources/project-info-reports_cs.properties
@@ -16,17 +16,17 @@
 # under the License.
 
 report.ci-management.access                                        = P\u0159\u00edstup
-report.ci-management.anthill.intro                                 = Tento projekt pou\u017e\u00edv\u00e1 {Anthill, http://www.anthillpro.com/html/products/anthillos/}.
-report.ci-management.bamboo.intro                                  = Tento projekt pou\u017e\u00edv\u00e1 {Bamboo, http://www.atlassian.com/software/bamboo/}.
-report.ci-management.buildforge.intro                              = Tento projekt pou\u017e\u00edv\u00e1 {Build Forge, http://www-306.ibm.com/software/awdtools/buildforge/enterprise/}.
-report.ci-management.continuum.intro                               = Tento projekt pou\u017e\u00edv\u00e1 {Continuum, http://continuum.apache.org/}.
-report.ci-management.cruisecontrol.intro                           = Tento projekt pou\u017e\u00edv\u00e1 {CruiseControl, http://cruisecontrol.sourceforge.net/}.
+report.ci-management.anthill.intro                                 = Tento projekt pou\u017e\u00edv\u00e1 {Anthill, https://www.ibm.com/mysupport/s/topic/0TO50000000IQPaGAO/anthillpro?language=en_US}.
+report.ci-management.bamboo.intro                                  = Tento projekt pou\u017e\u00edv\u00e1 {Bamboo, https://www.atlassian.com/software/bamboo/}.
+report.ci-management.buildforge.intro                              = Tento projekt pou\u017e\u00edv\u00e1 {Build Forge, https://www.ibm.com/products/rational-build-forge}.
+report.ci-management.continuum.intro                               = Tento projekt pou\u017e\u00edv\u00e1 {Continuum, https://continuum.apache.org/}.
+report.ci-management.cruisecontrol.intro                           = Tento projekt pou\u017e\u00edv\u00e1 {CruiseControl, https://cruisecontrol.sourceforge.net/}.
 report.ci-management.description                                   = Tento odkaz vede na definice v\u0161ech proces\u016f nep\u0159etr\u017eit\u00e9 integrace, kter\u00e9 pravideln\u011b a \u010dasto sestavuj\u00ed a testuj\u00ed k\u00f3d.
 report.ci-management.general.intro                                 = Tento projekt pou\u017e\u00edv\u00e1 syst\u00e9m nep\u0159etr\u017eit\u00e9 integrace.
 report.ci-management.github.intro                                  = Tento projekt pou\u017E\u00EDv\u00E1 {GitHub Actions, https://github.com/features/actions/}.
-report.ci-management.hudson.intro                                  = Tento projekt pou\u017e\u00edv\u00e1 {Hudson, http://hudson-ci.org/}.
+report.ci-management.hudson.intro                                  = Tento projekt pou\u017e\u00edv\u00e1 Hudson.
 report.ci-management.jenkins.intro                                 = Tento projekt pou\u017e\u00edv\u00e1 {Jenkins, https://www.jenkins.io/}.
-report.ci-management.luntbuild.intro                               = Tento projekt pou\u017e\u00edv\u00e1 {Luntbuild, http://luntbuild.javaforge.com/}.
+report.ci-management.luntbuild.intro                               = Tento projekt pou\u017e\u00edv\u00e1 {Luntbuild, https://sourceforge.net/p/luntbuild/}.
 report.ci-management.travis.intro                                  = Tento projekt pou\u017e\u00edv\u00e1 {Travis CI, https://travis-ci.com/}.
 report.ci-management.teamcity.intro                                = Tento projekt pou\u017e\u00edv\u00e1 {TeamCity, https://www.jetbrains.com/teamcity/}.
 report.ci-management.name                                          = Nep\u0159etr\u017eit\u00e1 integrace
@@ -119,16 +119,16 @@ report.dependency-convergence.title                                = Reaktor sbl
 report.dependency-info.description                                 = Tento dokument popisuje, jak zahrnout tento projekt jako z\u00e1vislost pomoc\u00ed r\u016fzn\u00fdch n\u00e1stroj\u016f z\u00e1vislost \u0159\u00edzen\u00ed.
 report.index.nodescription                                         = Pro tento projekt nen\u00ed p\u0159ipojen \u017e\u00e1dn\u00fd popis.
 report.index.title                                                 = O projektu
-report.issue-management.bugzilla.intro                             = Tento projekt pou\u017e\u00edv\u00e1 {Bugzillu, http://www.bugzilla.org/}.
+report.issue-management.bugzilla.intro                             = Tento projekt pou\u017e\u00edv\u00e1 {Bugzilla, https://www.bugzilla.org/}.
 report.issue-management.custom.intro                               = Tento projekt pou\u017e\u00edv\u00e1 pro sledov\u00e1n\u00ed sv\u00fdch probl\u00e9m\u016f %issueManagementSystem%.
 report.issue-management.description                                = Toto je odkaz na syst\u00e9m sledov\u00e1n\u00ed probl\u00e9m\u016f tohoto projektu. Pou\u017eit\u00edm tohoto odkazu m\u016f\u017eete vytv\u00e1\u0159et a vyhled\u00e1vat probl\u00e9my (chyby, vlastnosti, po\u017eadavky na zm\u011bnu).
 report.issue-management.general.intro                              = Tento projekt pou\u017e\u00edv\u00e1 syst\u00e9m sledov\u00e1n\u00ed probl\u00e9m\u016f.
 report.issue-management.intro                                      = Probl\u00e9my, chyby a po\u017eadavky na vlastnosti by m\u011bly b\u00fdt zad\u00e1ny do n\u00e1sleduj\u00edc\u00edho syst\u00e9mu sledov\u00e1n\u00ed probl\u00e9m\u016f.
-report.issue-management.jira.intro                                 = Tento projekt pou\u017e\u00edv\u00e1 {Jira, http://www.atlassian.com/software/jira}, aplikaci pro sledov\u00e1n\u00ed probl\u00e9m\u016f a spr\u00e1vu projektu zalo\u017eenou na J2EE.
+report.issue-management.jira.intro                                 = Tento projekt pou\u017e\u00edv\u00e1 {JIRA, https://www.atlassian.com/software/jira}, aplikaci pro sledov\u00e1n\u00ed probl\u00e9m\u016f a spr\u00e1vu projektu zalo\u017eenou na J2EE.
 report.issue-management.name                                       = Sledov\u00e1n\u00ed probl\u00e9m\u016f
 report.issue-management.noissueManagement                          = Projekt nem\u00e1 stanoven\u00fd \u017e\u00e1dn\u00fd syst\u00e9m sledov\u00e1n\u00ed probl\u00e9m\u016f. Zkuste se pod\u00edvat pozd\u011bji.
 report.issue-management.overview.title                             = Souhrn
-report.issue-management.scarab.intro                               = Tento projekt pou\u017e\u00edv\u00e1 {Scarab, http://scarab.tigris.org/}.
+report.issue-management.scarab.intro                               = Tento projekt pou\u017e\u00edv\u00e1 Scarab.
 report.issue-management.title                                      = Sledov\u00e1n\u00ed probl\u00e9m\u016f
 report.licenses.description                                        = Odkaz na definice licenc\u00ed projektu.
 report.licenses.multiple                                           = Tento projekt je k dispozici pod v\u00edce licencemi:
@@ -158,13 +158,13 @@ report.scm.accessthroughtproxy.svn.intro3                          = P\u0159\u00
 report.scm.accessthroughtproxy.title                               = P\u0159\u00edstup prost\u0159ednictv\u00edm proxy
 report.scm.anonymousaccess.general.intro                           = Pro v\u00edce informac\u00ed o sta\u017een\u00ed zdrojov\u00fdch k\u00f3du prost\u0159ednictv\u00edm anonymn\u00edho p\u0159\u00edstupu se pod\u00edvejte do dokumentace pou\u017eit\u00e9ho SCM.
 report.scm.anonymousaccess.git.intro                               = Zdrojov\u00fd k\u00f3d m\u016f\u017ee b\u00fdt z Git sta\u017een anonymn\u011b t\u00edmto p\u0159\u00edkazem (viz {https://git-scm.com/docs/git-clone,https://git-scm.com/docs/git-clone}):
-report.scm.anonymousaccess.hg.intro                                = Zdrojov\u00fd k\u00f3d m\u016f\u017ee b\u00fdt z Mercurial sta\u017een anonymn\u011b t\u00edmto p\u0159\u00edkazem (viz {http://www.selenic.com/mercurial/hg.1.html#clone,http://www.selenic.com/mercurial/hg.1.html#clone}):
+report.scm.anonymousaccess.hg.intro                                = Zdrojov\u00fd k\u00f3d m\u016f\u017ee b\u00fdt z Mercurial sta\u017een anonymn\u011b t\u00edmto p\u0159\u00edkazem (viz {https://www.selenic.com/mercurial/hg.1.html#clone,https://www.selenic.com/mercurial/hg.1.html#clone}):
 report.scm.anonymousaccess.svn.intro                               = Zdrojov\u00fd k\u00f3d m\u016f\u017ee b\u00fdt ze Subversion sta\u017een anonymn\u011b t\u00edmto p\u0159\u00edkazem:
 report.scm.anonymousaccess.title                                   = Anonymn\u00ed p\u0159\u00edstup
 report.scm.description                                             = Odkaz na online repozit\u00e1\u0159 zdrojov\u00fdch k\u00f3du, kter\u00fd m\u016f\u017ee b\u00fdt prohl\u00ed\u017een webov\u00fdm prohl\u00ed\u017ee\u010dem.
 report.scm.devaccess.general.intro                                 = Pro v\u00edce informac\u00ed o z\u00edsk\u00e1n\u00ed zdrojov\u00fdch k\u00f3du v\u00fdvoj\u00e1\u0159em se pod\u00edvejte do dokumentace pou\u017eit\u00e9ho SCM. URL spojen\u00ed je:
 report.scm.devaccess.git.intro                                     = Prost\u0159ednictv\u00edm t\u00e9to metody mohou p\u0159istupovat ke stromu Git pouze v\u00fdvoj\u00e1\u0159i projektu (viz {https://git-scm.com/docs/git-clone,https://git-scm.com/docs/git-clone}).
-report.scm.devaccess.hg.intro                                      = Prost\u0159ednictv\u00edm t\u00e9to metody mohou p\u0159istupovat ke stromu Mercurial pouze v\u00fdvoj\u00e1\u0159i projektu (viz {http://www.selenic.com/mercurial/hg.1.html#clone,http://www.selenic.com/mercurial/hg.1.html#clone}).
+report.scm.devaccess.hg.intro                                      = Prost\u0159ednictv\u00edm t\u00e9to metody mohou p\u0159istupovat ke stromu Mercurial pouze v\u00fdvoj\u00e1\u0159i projektu (viz {https://www.selenic.com/mercurial/hg.1.html#clone,https://www.selenic.com/mercurial/hg.1.html#clone}).
 report.scm.devaccess.svn.intro1.https                              = V\u0161ichni mohou p\u0159istupovat k repozit\u00e1\u0159i Subversion prost\u0159ednictv\u00edm HTTPS, ale zapisuj\u00edc\u00ed mus\u00ed st\u00e1hnout zdrojov\u00fd k\u00f3d prost\u0159ednictv\u00edm HTTPS.
 report.scm.devaccess.svn.intro1.other                              = Zapisuj\u00edc\u00ed si mus\u00ed st\u00e1hnout repozit\u00e1\u0159 Subversion.
 report.scm.devaccess.svn.intro1.svn                                = Zapisuj\u00edc\u00ed si mus\u00ed st\u00e1hnout repozit\u00e1\u0159 Subversion prost\u0159ednictv\u00edm SVN.
@@ -176,8 +176,8 @@ report.scm.name                                                    = Repozit\u00
 report.scm.noscm                                                   = Projekt nem\u00e1 stanoven\u00fd \u017e\u00e1dn\u00fd syst\u00e9m pro spr\u00e1vu zdrojov\u00fdch k\u00f3d\u016f. Zkuste se pod\u00edvat pozd\u011bji.
 report.scm.overview.title                                          = P\u0159ehled
 report.scm.git.intro                                               = Tento projekt pou\u017e\u00edv\u00e1 {Git, https://git-scm.com/} ke spr\u00e1v\u011b zdrojov\u00fdch k\u00f3d\u016f. N\u00e1vod na pou\u017eit\u00ed Git je k dispozici na {https://git-scm.com/doc,https://git-scm.com/doc}.
-report.scm.hg.intro                                                = Tento projekt pou\u017e\u00edv\u00e1 {Mercurial, https://www.mercurial-scm.org/} ke spr\u00e1v\u011b zdrojov\u00fdch k\u00f3d\u016f. N\u00e1vod na pou\u017eit\u00ed Mercurial je k dispozici na {http://hgbook.red-bean.com/read/, http://hgbook.red-bean.com/read/}.
-report.scm.svn.intro                                               = Tento projekt pou\u017e\u00edv\u00e1 {Subversion, http://subversion.apache.org/} ke spr\u00e1v\u011b zdrojov\u00fdch k\u00f3d\u016f. N\u00e1vod na pou\u017eit\u00ed Subversion je k dispozici na {http://svnbook.red-bean.com/, http://svnbook.red-bean.com/}.
+report.scm.hg.intro                                                = Tento projekt pou\u017e\u00edv\u00e1 {Mercurial, https://www.mercurial-scm.org/} ke spr\u00e1v\u011b zdrojov\u00fdch k\u00f3d\u016f. N\u00e1vod na pou\u017eit\u00ed Mercurial je k dispozici na {https://hgbook.red-bean.com/read/, https://hgbook.red-bean.com/read/}.
+report.scm.svn.intro                                               = Tento projekt pou\u017e\u00edv\u00e1 {Subversion, https://subversion.apache.org/} ke spr\u00e1v\u011b zdrojov\u00fdch k\u00f3d\u016f. N\u00e1vod na pou\u017eit\u00ed Subversion je k dispozici na {https://svnbook.red-bean.com/, https://svnbook.red-bean.com/}.
 report.scm.title                                                   = Repozit\u00e1\u0159 zdrojov\u00fdch k\u00f3d\u016f
 report.scm.webaccess.nourl                                         = Projekt nem\u00e1 stanoven\u00e9 \u017e\u00e1dn\u00e9 webov\u00e9 rozhran\u00ed repozit\u00e1\u0159e. Zkuste se pod\u00edvat pozd\u011bji.
 report.scm.webaccess.title                                         = Webov\u00fd p\u0159\u00edstup
