--- a/src/main/resources/project-info-reports_de.properties
+++ b/src/main/resources/project-info-reports_de.properties
@@ -16,17 +16,17 @@
 # under the License.
 
 report.ci-management.access                                        = Zugriff
-report.ci-management.anthill.intro                                 = Dieses Projekt verwendet {Anthill, http://www.anthillpro.com/html/products/anthillos/}.
-report.ci-management.bamboo.intro                                  = Dieses Projekt verwendet {Bamboo, http://www.atlassian.com/software/bamboo/}.
-report.ci-management.buildforge.intro                              = Dieses Projekt verwendet {Build Forge, http://www-306.ibm.com/software/awdtools/buildforge/enterprise/}.
-report.ci-management.continuum.intro                               = Dieses Projekt verwendet {Continuum, http://continuum.apache.org/}.
-report.ci-management.cruisecontrol.intro                           = Dieses Projekt verwendet {CruiseControl, http://cruisecontrol.sourceforge.net/}.
+report.ci-management.anthill.intro                                 = Dieses Projekt verwendet {Anthill, https://www.ibm.com/mysupport/s/topic/0TO50000000IQPaGAO/anthillpro?language=en_US}.
+report.ci-management.bamboo.intro                                  = Dieses Projekt verwendet {Bamboo, https://www.atlassian.com/software/bamboo/}.
+report.ci-management.buildforge.intro                              = Dieses Projekt verwendet {Build Forge, https://www.ibm.com/products/rational-build-forge}.
+report.ci-management.continuum.intro                               = Dieses Projekt verwendet {Continuum, https://continuum.apache.org/}.
+report.ci-management.cruisecontrol.intro                           = Dieses Projekt verwendet {CruiseControl, https://cruisecontrol.sourceforge.net/}.
 report.ci-management.description                                   = Informationen \u00fcber das Continuous-Integration-System dieses Projektes.
 report.ci-management.general.intro                                 = Dieses Projekt verwendet ein Continuous Integration System.
 report.ci-management.github.intro                                  = Dieses Projekt verwendet {GitHub Actions, https://github.com/features/actions/}.
-report.ci-management.hudson.intro                                  = Dieses Projekt verwendet {Hudson, http://hudson-ci.org/}.
+report.ci-management.hudson.intro                                  = Dieses Projekt verwendet Hudson.
 report.ci-management.jenkins.intro                                 = Dieses Projekt verwendet {Jenkins, https://www.jenkins.io/}.
-report.ci-management.luntbuild.intro                               = Dieses Projekt verwendet {Luntbuild, http://luntbuild.javaforge.com/}.
+report.ci-management.luntbuild.intro                               = Dieses Projekt verwendet {Luntbuild, https://sourceforge.net/p/luntbuild/}.
 report.ci-management.teamcity.intro                                = Dieses Projekt verwendet {TeamCity, https://www.jetbrains.com/teamcity/}.
 report.ci-management.travis.intro                                  = Dieses Projekt verwendet {Travis CI, https://travis-ci.com/}.
 report.ci-management.name                                          = Continuous-Integration
@@ -134,16 +134,16 @@ report.dependency-info.title                                       = Maven-Koord
 report.dependency-info.description                                 = In diesem Dokument sind Informationen enthalten, wie dieses Projekt als Abh\u00e4ngigkeit zu anderen Dependency-Management-Tools hinzugef\u00fcgt werden kann.
 report.index.nodescription                                         = Derzeit existiert keine Beschreibung f\u00fcr dieses Projekt.
 report.index.title                                                 = Willkommen bei
-report.issue-management.bugzilla.intro                             = Dieses Projekt verwendet {Bugzilla, http://www.bugzilla.org/}.
+report.issue-management.bugzilla.intro                             = Dieses Projekt verwendet {Bugzilla, https://www.bugzilla.org/}.
 report.issue-management.custom.intro                               = Dieses Projekt verwendet %issueManagementSystem%.
 report.issue-management.description                                = Informationen \u00fcber das Issue-Management-System dieses Projektes. Issues (Bugs, Feature-Requests, Aufgaben) k\u00f6nnen hier erstellt und abgefragt werden.
 report.issue-management.general.intro                              = Dieses Projekt verwendet ein Issue-Management-System.
 report.issue-management.intro                                      = Bugs, Feature-Requests und Aufgaben sollten mittels des folgenden Issue-Management-Systems verwaltet werden:
-report.issue-management.jira.intro                                 = Dieses Projekt verwendet {JIRA, http://www.atlassian.com/software/jira}.
+report.issue-management.jira.intro                                 = Dieses Projekt verwendet {JIRA, https://www.atlassian.com/software/jira}.
 report.issue-management.name                                       = Issue-Management
 report.issue-management.noissueManagement                          = F\u00fcr dieses Projekt wurde kein Issue-Tracker definiert.
 report.issue-management.overview.title                             = \u00dcbersicht
-report.issue-management.scarab.intro                               = Dieses Projekt verwendet {Scarab, http://scarab.tigris.org/}.
+report.issue-management.scarab.intro                               = Dieses Projekt verwendet Scarab.
 report.issue-management.title                                      = Issue-Management
 report.licenses.description                                        = Lizenzinformationen dieses Projektes.
 report.licenses.name                                               = Lizenzen
@@ -173,12 +173,12 @@ report.scm.accessthroughtproxy.svn.intro2                          = Diese Datei
 report.scm.accessthroughtproxy.svn.intro3                          = Beispiel: "servers"-Datei editieren und Proxy hinzuf\u00fcgen:
 report.scm.accessthroughtproxy.title                               = Zugriff \u00fcber einen Proxy
 report.scm.anonymousaccess.general.intro                           = Konsultieren Sie die Dokumentation des verwendeten Versionskontrollsystems f\u00fcr weitere Informationen \u00fcber anonymen Zugriff. Der Web-Link ist:
-report.scm.anonymousaccess.hg.intro                                = Der Quellcode dieses Projektes kann anonym mit Mercurial \u00fcber folgenden Befehl ausgecheckt werden (Siehe {http://www.selenic.com/mercurial/hg.1.html#clone,http://www.selenic.com/mercurial/hg.1.html#clone}).
+report.scm.anonymousaccess.hg.intro                                = Der Quellcode dieses Projektes kann anonym mit Mercurial \u00fcber folgenden Befehl ausgecheckt werden (Siehe {https://www.selenic.com/mercurial/hg.1.html#clone,https://www.selenic.com/mercurial/hg.1.html#clone}).
 report.scm.anonymousaccess.svn.intro                               = Der Quellcode dieses Projektes kann anonym mit Subversion \u00fcber folgenden Befehl ausgecheckt werden:
 report.scm.anonymousaccess.title                                   = Anonymer Zugang f\u00fcr jedermann
 report.scm.description                                             = Informationen zum Versionskontrollsystem dieses Projektes.
 report.scm.devaccess.general.intro                                 = Konsultieren Sie die Dokumentation des verwendeten Versionskontrollsystems f\u00fcr weitere Informationen \u00fcber Schreib-Zugriff f\u00fcr Entwickler unter:
-report.scm.devaccess.hg.intro                                      = Nur Projekt Entwickler k\u00f6nnen mit dieser Methode auf den Mercurial Baum zugreifen. (Siehe {http://www.selenic.com/mercurial/hg.1.html#clone,http://www.selenic.com/mercurial/hg.1.html#clone}).
+report.scm.devaccess.hg.intro                                      = Nur Projekt Entwickler k\u00f6nnen mit dieser Methode auf den Mercurial Baum zugreifen. (Siehe {https://www.selenic.com/mercurial/hg.1.html#clone,https://www.selenic.com/mercurial/hg.1.html#clone}).
 report.scm.devaccess.svn.intro1.https                              = Jeder kann auf das Subversion-Archiv via HTTP zugreifen, aber Entwickler m\u00fcssen das Subversion-Archiv via HTTPS auschecken, um sp\u00e4ter \u00c4nderungen einchecken zu k\u00f6nnen:
 report.scm.devaccess.svn.intro1.other                              = Entwickler m\u00fcssen das Subversion-Archiv auschecken.
 report.scm.devaccess.svn.intro1.svn                                = Entwickler m\u00fcssen das Subversion-Archiv via SVN auschecken.
@@ -189,8 +189,8 @@ report.scm.general.intro                                           = Dieses Proj
 report.scm.name                                                    = Versionskontrolle
 report.scm.noscm                                                   = Es wurde kein Versionskontrollsystem f\u00fcr dieses Projekt definiert.
 report.scm.overview.title                                          = \u00dcbersicht
-report.scm.hg.intro                                                = Dieses Projekt verwendet {Mercurial, https://www.mercurial-scm.org/} um seinen Quellcode zu verwalten. Informationen \u00fcber Mercurial finden Sie unter: {http://hgbook.red-bean.com/read/, http://hgbook.red-bean.com/read/}.
-report.scm.svn.intro                                               = Dieses Projekt verwendet {Subversion, http://subversion.apache.org/} um seinen Quellcode zu verwalten. Informationen \u00fcber Subversion finden Sie unter: {http://svnbook.red-bean.com/, http://svnbook.red-bean.com/}.
+report.scm.hg.intro                                                = Dieses Projekt verwendet {Mercurial, https://www.mercurial-scm.org/} um seinen Quellcode zu verwalten. Informationen \u00fcber Mercurial finden Sie unter: {https://hgbook.red-bean.com/read/, https://hgbook.red-bean.com/read/}.
+report.scm.svn.intro                                               = Dieses Projekt verwendet {Subversion, https://subversion.apache.org/} um seinen Quellcode zu verwalten. Informationen \u00fcber Subversion finden Sie unter: {https://svnbook.red-bean.com/, https://svnbook.red-bean.com/}.
 report.scm.title                                                   = Versionskontrolle
 report.scm.webaccess.nourl                                         = Es wurde keine navigierbare Version des Quellcode-Archivs eingerichtet.
 report.scm.webaccess.title                                         = Web-Browser-Zugang
