--- a/src/main/resources/project-info-reports_es.properties
+++ b/src/main/resources/project-info-reports_es.properties
@@ -16,17 +16,17 @@
 # under the License.
 
 report.ci-management.access                                        = Acceso
-report.ci-management.anthill.intro                                 = Este proyecto usa {Anthill, http://www.anthillpro.com/html/products/anthillos/}.
-report.ci-management.bamboo.intro                                  = Este proyecto usa {Bamboo, http://www.atlassian.com/software/bamboo/}.
-report.ci-management.buildforge.intro                              = Este proyecto usa {Build Forge, http://www-306.ibm.com/software/awdtools/buildforge/enterprise/}.
-report.ci-management.continuum.intro                               = Este proyecto usa {Continuum, http://continuum.apache.org/}.
-report.ci-management.cruisecontrol.intro                           = Este proyecto usa {CruiseControl, http://cruisecontrol.sourceforge.net/}.
+report.ci-management.anthill.intro                                 = Este proyecto usa {Anthill, https://www.ibm.com/mysupport/s/topic/0TO50000000IQPaGAO/anthillpro?language=en_US}.
+report.ci-management.bamboo.intro                                  = Este proyecto usa {Bamboo, https://www.atlassian.com/software/bamboo/}.
+report.ci-management.buildforge.intro                              = Este proyecto usa {Build Forge, https://www.ibm.com/products/rational-build-forge}.
+report.ci-management.continuum.intro                               = Este proyecto usa {Continuum, https://continuum.apache.org/}.
+report.ci-management.cruisecontrol.intro                           = Este proyecto usa {CruiseControl, https://cruisecontrol.sourceforge.net/}.
 report.ci-management.description                                   = Enlace a las definiciones de los procesos de integraci\u00f3n continua que construyen y prueban el c\u00f3digo de forma frecuente y regular.
 report.ci-management.general.intro                                 = Este proyecto usa un Sistema de Integraci\u00f3n Continua
 report.ci-management.github.intro                                  = Este proyecto usa {GitHub Actions, https://github.com/features/actions/}.
-report.ci-management.hudson.intro                                  = Este proyecto usa {Hudson, http://hudson-ci.org/}.
+report.ci-management.hudson.intro                                  = Este proyecto usa Hudson.
 report.ci-management.jenkins.intro                                 = Este proyecto usa {Jenkins, https://www.jenkins.io/}.
-report.ci-management.luntbuild.intro                               = Este proyecto usa {Luntbuild, http://luntbuild.javaforge.com/}.
+report.ci-management.luntbuild.intro                               = Este proyecto usa {Luntbuild, https://sourceforge.net/p/luntbuild/}.
 report.ci-management.teamcity.intro                                = Este proyecto usa {TeamCity, https://www.jetbrains.com/teamcity/}.
 report.ci-management.travis.intro                                  = Este proyecto usa {Travis CI, https://travis-ci.com/}.
 report.ci-management.name                                          = Integraci\u00f3n Continua
@@ -124,16 +124,16 @@ report.dependency-info.title                                       = Coordenadas
 report.dependency-info.description                                 = Este documento describe c\u00f3mo incluir este proyecto como una dependencia utilizando distintas herramientas de gesti\u00f3n de dependencias.
 report.index.nodescription                                         = A\u00FAn no se ha escrito una descripci\u00F3n para este proyecto.
 report.index.title                                                 = Bienvenido a
-report.issue-management.bugzilla.intro                             = Este proyecto usa {Bugzilla, http://www.bugzilla.org/}.
+report.issue-management.bugzilla.intro                             = Este proyecto usa {Bugzilla, https://www.bugzilla.org/}.
 report.issue-management.custom.intro                               = Este proyecto usa %issueManagementSystem% para gestionar las incidencias.
 report.issue-management.description                                = Enlace al sistema de gesti\u00f3n de incidencias de este proyecto. Incidencias (errores, caracter\u00edsticas, cambios) se pueden crear y consultar usando este enlace.
 report.issue-management.general.intro                              = Este proyecto usa un Sistema de Gesti\u00f3n de Incidencias para gestionar las incidencias.
 report.issue-management.intro                                      = Incidencias, problemas, y peticiones de nuevas caracter\u00edsticas se deben notificar a este proyecto usando el siguiente sistema de gesti\u00f3n de incidencias.
-report.issue-management.jira.intro                                 = Este proyecto usa {JIRA, http://www.atlassian.com/software/jira}, un sistema de gesti\u00f3n de proyectos e incidencias basado en J2EE.
+report.issue-management.jira.intro                                 = Este proyecto usa {JIRA, https://www.atlassian.com/software/jira}, un sistema de gesti\u00f3n de proyectos e incidencias basado en J2EE.
 report.issue-management.name                                       = Gesti\u00f3n de Incidencias
 report.issue-management.noissueManagement                          = No hay ning\u00fan sistema de gesti\u00f3n de incidencias definido para el proyecto. Compruebe de nuevo dentro de algunos d\u00edas.
 report.issue-management.overview.title                             = Resumen
-report.issue-management.scarab.intro                               = Este proyecto usa {Scarab, http://scarab.tigris.org/}.
+report.issue-management.scarab.intro                               = Este proyecto usa Scarab.
 report.issue-management.title                                      = Gesti\u00f3n de Incidencias
 report.licenses.description                                        = Enlace a la definici\u00f3n de las licencias del proyecto.
 report.licenses.name                                               = Licencia del Proyecto
@@ -175,7 +175,7 @@ report.scm.general.intro                                           = Este proyec
 report.scm.name                                                    = Repositorio de C\u00f3digo
 report.scm.noscm                                                   = No se ha definido ning\u00fan sistema de gesti\u00f3n de c\u00f3digo fuente. Compruebe de nuevo dentro de algunos d\u00edas.
 report.scm.overview.title                                          = Resumen
-report.scm.svn.intro                                               = Este proyecto usa {Subversion, http://subversion.apache.org/} para gestionar su c\u00f3digo. Instrucciones sobre el uso de Subversion pueden encontararse en {http://svnbook.red-bean.com/, http://svnbook.red-bean.com/}.
+report.scm.svn.intro                                               = Este proyecto usa {Subversion, https://subversion.apache.org/} para gestionar su c\u00f3digo. Instrucciones sobre el uso de Subversion pueden encontararse en {https://svnbook.red-bean.com/, https://svnbook.red-bean.com/}.
 report.scm.title                                                   = Repositorio de Fuentes
 report.scm.webaccess.nourl                                         = No hay ning\u00fan repositorio de fuentes online definido para el proyecto. Compruebe de nuevo dentro de algunos d\u00edas.
 report.scm.webaccess.title                                         = Acceso Web
