--- a/src/main/resources/project-info-reports_gl.properties
+++ b/src/main/resources/project-info-reports_gl.properties
@@ -16,17 +16,17 @@
 # under the License.
 
 report.ci-management.access                                        = Acceso
-report.ci-management.anthill.intro                                 = Este proxecto usa {Anthill, http://www.anthillpro.com/html/products/anthillos/}.
-report.ci-management.bamboo.intro                                  = Este proxecto usa {Bamboo, http://www.atlassian.com/software/bamboo/}.
-report.ci-management.buildforge.intro                              = Este proxecto usa {Build Forge, http://www-306.ibm.com/software/awdtools/buildforge/enterprise/}.
-report.ci-management.continuum.intro                               = Este proxecto usa {Continuum, http://continuum.apache.org/}.
-report.ci-management.cruisecontrol.intro                           = Este proxecto usa {CruiseControl, http://cruisecontrol.sourceforge.net/}.
+report.ci-management.anthill.intro                                 = Este proxecto usa {Anthill, https://www.ibm.com/mysupport/s/topic/0TO50000000IQPaGAO/anthillpro?language=en_US}.
+report.ci-management.bamboo.intro                                  = Este proxecto usa {Bamboo, https://www.atlassian.com/software/bamboo/}.
+report.ci-management.buildforge.intro                              = Este proxecto usa {Build Forge, https://www.ibm.com/products/rational-build-forge}.
+report.ci-management.continuum.intro                               = Este proxecto usa {Continuum, https://continuum.apache.org/}.
+report.ci-management.cruisecontrol.intro                           = Este proxecto usa {CruiseControl, https://cruisecontrol.sourceforge.net/}.
 report.ci-management.description                                   = Enlace \u00E1s definicio\u00F3ns dos procesos de integraci\u00f3n continua que constr\u00FAen e proban o c\u00f3digo de forma frecuente e regular.
 report.ci-management.general.intro                                 = Este proxecto usa un Sistema de Integraci\u00f3n Continua
 report.ci-management.github.intro                                  = Este proxecto usa {GitHub Actions, https://github.com/features/actions/}.
-report.ci-management.hudson.intro                                  = Este proxecto usa {Hudson, http://hudson-ci.org/}.
+report.ci-management.hudson.intro                                  = Este proxecto usa Hudson.
 report.ci-management.jenkins.intro                                 = Este proxecto usa {Jenkins, https://www.jenkins.io/}.
-report.ci-management.luntbuild.intro                               = Este proxecto usa {Luntbuild, http://luntbuild.javaforge.com/}.
+report.ci-management.luntbuild.intro                               = Este proxecto usa {Luntbuild, https://sourceforge.net/p/luntbuild/}.
 report.ci-management.teamcity.intro                                = Este proxecto usa {TeamCity, https://www.jetbrains.com/teamcity/}.
 report.ci-management.travis.intro                                  = Este proxecto usa {Travis CI, https://travis-ci.com/}.
 report.ci-management.name                                          = Integraci\u00f3n Continua
@@ -110,16 +110,16 @@ report.dependency-convergence.stats.modules                        = N\u00famero
 report.dependency-convergence.title                                = Converxencia de Dependecias no Reactor
 report.index.nodescription                                         = A\u00EDnda non se escribiu unha descrici\u00F3n para este proxecto.
 report.index.title                                                 = Benvido a
-report.issue-management.bugzilla.intro                             = Este proxecto usa {Bugzilla, http://www.bugzilla.org/}.
+report.issue-management.bugzilla.intro                             = Este proxecto usa {Bugzilla, https://www.bugzilla.org/}.
 report.issue-management.custom.intro                               = Este proxecto usa %issueManagementSystem% para xestionar as incidencias.
 report.issue-management.description                                = Enlace ao sistema de xesti\u00f3n de incidencias deste proxecto. As incidencias (erros, caracter\u00edsticas, cambios) p\u00F3dense crear e consultar usando este enlace.
 report.issue-management.general.intro                              = Este proxecto usa un Sistema de Xesti\u00f3n de Incidencias para xestionar as incidencias.
 report.issue-management.intro                                      = Incidencias, problemas, e petici\u00F3ns de novas caracter\u00edsticas d\u00E9bense notificar a este proxecto usando o seguinte sistema de xesti\u00f3n de incidencias.
-report.issue-management.jira.intro                                 = Este proxecto usa {JIRA, http://www.atlassian.com/software/jira}, un sistema de xesti\u00f3n de proxectos e incidencias baseado en J2EE.
+report.issue-management.jira.intro                                 = Este proxecto usa {JIRA, https://www.atlassian.com/software/jira}, un sistema de xesti\u00f3n de proxectos e incidencias baseado en J2EE.
 report.issue-management.name                                       = Xesti\u00f3n de Incidencias
 report.issue-management.noissueManagement                          = Non hai ning\u00fan sistema de xesti\u00f3n de incidencias definido para o proxecto. Comprobe de novo dentro dalg\u00FAns d\u00edas.
 report.issue-management.overview.title                             = Resumo
-report.issue-management.scarab.intro                               = Este proxecto usa {Scarab, http://scarab.tigris.org/}.
+report.issue-management.scarab.intro                               = Este proxecto usa Scarab.
 report.issue-management.title                                      = Xesti\u00f3n de Incidencias
 report.licenses.description                                        = Enlace \u00E1 definici\u00f3n das licenzas do proxecto.
 report.licenses.name                                               = Licenza do Proxecto
@@ -161,7 +161,7 @@ report.scm.general.intro                                           = Este proxec
 report.scm.name                                                    = Repositorio de C\u00f3digo
 report.scm.noscm                                                   = Non foi definido ning\u00fan sistema de xesti\u00f3n de c\u00f3digo fonte. Comprobe de novo dentro dalg\u00FAns d\u00edas.
 report.scm.overview.title                                          = Resumo
-report.scm.svn.intro                                               = Este proxecto usa {Subversion, http://subversion.tigris.org/} para xestionar o seu c\u00f3digo. Instrucci\u00F3ns sobre o uso de Subversion poden atoparse en {http://svnbook.red-bean.com/, http://svnbook.red-bean.com/}.
+report.scm.svn.intro                                               = Este proxecto usa {Subversion, https://subversion.apache.org/} para xestionar o seu c\u00f3digo. Instrucci\u00F3ns sobre o uso de Subversion poden atoparse en {https://svnbook.red-bean.com/, https://svnbook.red-bean.com/}.
 report.scm.title                                                   = Repositorio de Fontes
 report.scm.webaccess.nourl                                         = Non hai ning\u00fan repositorio de fontes online definido para o proxecto. Comprobe de novo dentro dalg\u00FAns d\u00edas.
 report.scm.webaccess.title                                         = Acceso Web
