--- a/src/main/resources/project-info-reports_hu.properties
+++ b/src/main/resources/project-info-reports_hu.properties
@@ -16,17 +16,17 @@
 # under the License.
 
 report.ci-management.access                                        = Hozz\u00e1f\u00e9r\u00e9s
-report.ci-management.anthill.intro                                 = Ez a projekt {Anthill, http://www.anthillpro.com/html/products/anthillos/} rendszert haszn\u00C3\u00A1l.
-report.ci-management.bamboo.intro                                  = Ez a projekt {Bamboo, http://www.atlassian.com/software/bamboo/} rendszert haszn\u00C3\u00A1l.
-report.ci-management.buildforge.intro                              = Ez a projekt {Build Forge, http://www-306.ibm.com/software/awdtools/buildforge/enterprise/} rendszert haszn\u00C3\u00A1l.
-report.ci-management.continuum.intro                               = Ez a projekt {Continuum, http://continuum.apache.org/} rendszert haszn\u00e1l.
-report.ci-management.cruisecontrol.intro                           = Ez a projekt {CruiseControl, http://cruisecontrol.sourceforge.net/} rendszert haszn\u00C3\u00A1l.
+report.ci-management.anthill.intro                                 = Ez a projekt {Anthill, https://www.ibm.com/mysupport/s/topic/0TO50000000IQPaGAO/anthillpro?language=en_US} rendszert haszn\u00C3\u00A1l.
+report.ci-management.bamboo.intro                                  = Ez a projekt {Bamboo, https://www.atlassian.com/software/bamboo/} rendszert haszn\u00C3\u00A1l.
+report.ci-management.buildforge.intro                              = Ez a projekt {Build Forge, https://www.ibm.com/products/rational-build-forge} rendszert haszn\u00C3\u00A1l.
+report.ci-management.continuum.intro                               = Ez a projekt {Continuum, https://continuum.apache.org/} rendszert haszn\u00e1l.
+report.ci-management.cruisecontrol.intro                           = Ez a projekt {CruiseControl, https://cruisecontrol.sourceforge.net/} rendszert haszn\u00C3\u00A1l.
 report.ci-management.description                                   = Link a CI folyamatok meghat\u00e1roz\u00e1saira, amelyek rendszeresen \u00e9s gyakran v\u00e9grehajtj\u00e1k a ford\u00edt\u00e1st \u00e9s a tesztel\u00e9st.
 report.ci-management.general.intro                                 = A projekt CI rendszert haszn\u00e1l.
 report.ci-management.github.intro                                  = Ez a projekt {GitHub Actions, https://github.com/features/actions/} rendszert haszn\u00C3\u00A1l.
-report.ci-management.hudson.intro                                  = Ez a projekt {Hudson, http://hudson-ci.org/} rendszert haszn\u00C3\u00A1l.
+report.ci-management.hudson.intro                                  = Ez a projekt Hudson rendszert haszn\u00C3\u00A1l.
 report.ci-management.jenkins.intro                                 = Ez a projekt {Jenkins, https://www.jenkins.io/} rendszert haszn\u00C3\u00A1l.
-report.ci-management.luntbuild.intro                               = Ez a projekt {Luntbuild, http://luntbuild.javaforge.com/} rendszert haszn\u00C3\u00A1l.
+report.ci-management.luntbuild.intro                               = Ez a projekt {Luntbuild, https://sourceforge.net/p/luntbuild/} rendszert haszn\u00C3\u00A1l.
 report.ci-management.travis.intro                                  = Ez a projekt {Travis CI, https://travis-ci.com/} rendszert haszn\u00C3\u00A1l.
 report.ci-management.teamcity.intro                                = Ez a projekt {TeamCity, https://travis-ci.com/} rendszert haszn\u00C3\u00A1l.
 report.ci-management.name                                          = Continuous Integration
@@ -83,16 +83,16 @@ report.dependency-convergence.stats.modules                        = Al-projekte
 report.dependency-convergence.title                                = F\u00fcgg\u0151s\u00e9gek
 report.index.nodescription                                         = A projektr\u0151l nincs le\u00edr\u00e1s.
 report.index.title                                                 = A projektr\u0151l
-report.issue-management.bugzilla.intro                             = Ez a projekt {Bugzilla, http://www.bugzilla.org/} hibak\u00f6vet\u0151 rendszert haszn\u00e1l.
+report.issue-management.bugzilla.intro                             = Ez a projekt {Bugzilla, https://www.bugzilla.org/} hibak\u00f6vet\u0151 rendszert haszn\u00e1l.
 report.issue-management.custom.intro                               = Ez a projekt %issueManagementSystem% hibak\u00f6vet\u0151 rendszert haszn\u00e1l a hib\u00e1k \u00e9s feladatok k\u00f6vet\u00e9s\u00e9re.
 report.issue-management.description                                = Link a projekt hibak\u00f6vet\u0151 rendszer\u00e9re:
 report.issue-management.general.intro                              = Ez a projekt hibak\u00f6vet\u0151 rendszert haszn\u00e1l a hib\u00e1k \u00e9s feladatok k\u00f6vet\u00e9s\u00e9re.
 report.issue-management.intro                                      = Hib\u00e1k \u00e9s fejleszt\u00e9si k\u00e9r\u00e9sek a k\u00f6vetkez\u0151 cimre k\u00fcldend\u0151ek:
-report.issue-management.jira.intro                                 = Ez a projekt {JIRA, http://www.atlassian.com/software/jira} hibak\u00f6vet\u0151 rendszert haszn\u00e1l, amely J2EE alap\u00fa.
+report.issue-management.jira.intro                                 = Ez a projekt {JIRA, https://www.atlassian.com/software/jira} hibak\u00f6vet\u0151 rendszert haszn\u00e1l, amely J2EE alap\u00fa.
 report.issue-management.name                                       = Hibak\u00f6vet\u00e9s
 report.issue-management.noissueManagement                          = Nincs hibak\u00f6vet\u0151 rendszer megadva, l\u00e1togass vissza k\u00e9s\u0151bb!
 report.issue-management.overview.title                             = \u00c1ttekint\u00e9s
-report.issue-management.scarab.intro                               = Ez a projekt {Scarab, http://scarab.tigris.org/} hibak\u00f6vet\u0151 rendszert haszn\u00e1l.
+report.issue-management.scarab.intro                               = Ez a projekt Scarab hibak\u00f6vet\u0151 rendszert haszn\u00e1l.
 report.issue-management.title                                      = Hibak\u00f6vet\u0151 rendszer
 report.licenses.description                                        = This is a link to the definitions of project licenses.
 report.licenses.name                                               = Projekt licence
@@ -130,7 +130,7 @@ report.scm.general.intro                                           = A projekt e
 report.scm.name                                                    = Forr\u00e1sk\u00f3d verzi\u00f3k\u00f6vet\u00e9s
 report.scm.noscm                                                   = Nincs verzi\u00f3k\u00f6vet\u0151 rendszer le\u00edr\u00e1s, l\u00e1togass vissza k\u00e9s\u0151bb.
 report.scm.overview.title                                          = \u00c1ttekint\u00e9s
-report.scm.svn.intro                                               = Ez a projekt {Subversion, http://subversion.apache.org/} rendszert haszn\u00e1l. A Subversion haszn\u00e1lat\u00e1r\u00f3l: {http://svnbook.red-bean.com/, http://svnbook.red-bean.com/}.
+report.scm.svn.intro                                               = Ez a projekt {Subversion, https://subversion.apache.org/} rendszert haszn\u00e1l. A Subversion haszn\u00e1lat\u00e1r\u00f3l: {https://svnbook.red-bean.com/, https://svnbook.red-bean.com/}.
 report.scm.title                                                   = A forr\u00e1sk\u00f3d verzi\u00f3k\u00f6vet\u0151 rendszere
 report.scm.webaccess.nourl                                         = Nincs a projekthez online forr\u00e1sk\u00f3d t\u00e1r, k\u00e9rlek l\u00e1togass vissza k\u00e9s\u0151bb.
 report.scm.webaccess.title                                         = Web hozz\u00e1f\u00e9r\u00e9s
