--- a/src/main/resources/project-info-reports_ko.properties
+++ b/src/main/resources/project-info-reports_ko.properties
@@ -16,15 +16,15 @@
 # under the License.
 
 report.ci-management.access                                        = \uc811\uadfc
-report.ci-management.anthill.intro                                 = \uc774 \ud504\ub85c\uc81d\ud2b8\ub294 {Anthill, http://www.anthillpro.com/html/products/anthillos/}\ub97c \uc0ac\uc6a9\ud569\ub2c8\ub2e4.
-report.ci-management.bamboo.intro                                  = \uc774 \ud504\ub85c\uc81d\ud2b8\ub294 {Bamboo, http://www.atlassian.com/software/bamboo/}\ub97c \uc0ac\uc6a9\ud569\ub2c8\ub2e4.
-report.ci-management.buildforge.intro                              = \uc774 \ud504\ub85c\uc81d\ud2b8\ub294 {Build Forge, http://www-306.ibm.com/software/awdtools/buildforge/enterprise}\ub97c \uc0ac\uc6a9\ud569\ub2c8\ub2e4.
-report.ci-management.continuum.intro                               = \uc774 \ud504\ub85c\uc81d\ud2b8\ub294 {Continuum, http://continuum.apache.org/}\uc744 \uc0ac\uc6a9\ud569\ub2c8\ub2e4.
-report.ci-management.cruisecontrol.intro                           = \uc774 \ud504\ub85c\uc81d\ud2b8\ub294 {CruiseControl, http://cruisecontrol.sourceforge.net/}\uc744 \uc0ac\uc6a9\ud569\ub2c8\ub2e4.
+report.ci-management.anthill.intro                                 = \uc774 \ud504\ub85c\uc81d\ud2b8\ub294 {Anthill, https://www.ibm.com/mysupport/s/topic/0TO50000000IQPaGAO/anthillpro?language=en_US}\ub97c \uc0ac\uc6a9\ud569\ub2c8\ub2e4.
+report.ci-management.bamboo.intro                                  = \uc774 \ud504\ub85c\uc81d\ud2b8\ub294 {Bamboo, https://www.atlassian.com/software/bamboo/}\ub97c \uc0ac\uc6a9\ud569\ub2c8\ub2e4.
+report.ci-management.buildforge.intro                              = \uc774 \ud504\ub85c\uc81d\ud2b8\ub294 {Build Forge, https://www.ibm.com/products/rational-build-forge}\ub97c \uc0ac\uc6a9\ud569\ub2c8\ub2e4.
+report.ci-management.continuum.intro                               = \uc774 \ud504\ub85c\uc81d\ud2b8\ub294 {Continuum, https://continuum.apache.org/}\uc744 \uc0ac\uc6a9\ud569\ub2c8\ub2e4.
+report.ci-management.cruisecontrol.intro                           = \uc774 \ud504\ub85c\uc81d\ud2b8\ub294 {CruiseControl, https://cruisecontrol.sourceforge.net/}\uc744 \uc0ac\uc6a9\ud569\ub2c8\ub2e4.
 report.ci-management.github.intro                                  = \uC774 \uD504\uB85C\uC81D\uD2B8\uB294 {GitHub Actions, https://github.com/features/actions/}\uC744 \uC0AC\uC6A9\uD569\uB2C8\uB2E4.
-report.ci-management.hudson.intro                                  = \uc774 \ud504\ub85c\uc81d\ud2b8\ub294 {Hudson, http://hudson-ci.org/}\uc744 \uc0ac\uc6a9\ud569\ub2c8\ub2e4.
+report.ci-management.hudson.intro                                  = \uc774 \ud504\ub85c\uc81d\ud2b8\ub294 Hudson\uc744 \uc0ac\uc6a9\ud569\ub2c8\ub2e4.
 report.ci-management.jenkins.intro                                 = \uc774 \ud504\ub85c\uc81d\ud2b8\ub294 {Jenkins, https://www.jenkins.io/}\uc744 \uc0ac\uc6a9\ud569\ub2c8\ub2e4.
-report.ci-management.luntbuild.intro                               = \uc774 \ud504\ub85c\uc81d\ud2b8\ub294 {Luntbuild, http://luntbuild.javaforge.com/}\uc744 \uc0ac\uc6a9\ud569\ub2c8\ub2e4.
+report.ci-management.luntbuild.intro                               = \uc774 \ud504\ub85c\uc81d\ud2b8\ub294 {Luntbuild, https://sourceforge.net/p/luntbuild/}\uc744 \uc0ac\uc6a9\ud569\ub2c8\ub2e4.
 report.ci-management.teamcity.intro                                = \uc774 \ud504\ub85c\uc81d\ud2b8\ub294 {TeamCity, https://www.jetbrains.com/teamcity/}\uc744 \uc0ac\uc6a9\ud569\ub2c8\ub2e4.
 report.ci-management.travis.intro                                  = \uc774 \ud504\ub85c\uc81d\ud2b8\ub294 {Travis CI, https://travis-ci.com/}\uc744 \uc0ac\uc6a9\ud569\ub2c8\ub2e4.
 report.ci-management.description                                   = \uc774\ub294 \uc815\uae30\uc801\uc73c\ub85c \uc218\ud589\ud558\ub294 \ube4c\ub4dc/\ud14c\uc2a4\ud2b8\uc5d0 \ub300\ud55c \uc5f0\uc18d \ud1b5\ud569 \uacf5\uc815\uc5d0 \ub300\ud55c \ub9c1\ud06c\uc785\ub2c8\ub2e4.
@@ -102,16 +102,16 @@ report.dependency-convergence.stats.modules                        = \ud558\uc70
 report.dependency-convergence.title                                = \ubc18\uc751\uc790 \uc758\uc874\ubb3c \uc9d1\uc911 (Reactor Dependency Convergence)
 report.index.nodescription                                         = \uc774 \ud504\ub85c\uc81d\ud2b8\uc640 \uad00\ub828\ub41c \uc124\uba85\uc774 \ud604\uc7ac \uc5c6\uc2b5\ub2c8\ub2e4.
 report.index.title                                                 = \uc815\ubcf4
-report.issue-management.bugzilla.intro                             = \uc774 \ud504\ub85c\uc81d\ud2b8\ub294 {Bugzilla, http://www.bugzilla.org/}\ub97c \uc0ac\uc6a9\ud569\ub2c8\ub2e4.
+report.issue-management.bugzilla.intro                             = \uc774 \ud504\ub85c\uc81d\ud2b8\ub294 {Bugzilla, https://www.bugzilla.org/}\ub97c \uc0ac\uc6a9\ud569\ub2c8\ub2e4.
 report.issue-management.custom.intro                               = \uc774 \ud504\ub85c\uc81d\ud2b8\ub294 \uc774\uc288 \uad00\ub9ac\ub97c \uc704\ud574 %issueManagementSystem%\uc744(\ub97c) \uc0ac\uc6a9\ud569\ub2c8\ub2e4.
 report.issue-management.description                                = \uc774 \ud504\ub85c\uc81d\ud2b8\ub97c \uc704\ud55c \uc774\uc288\uad00\ub9ac\uc2dc\uc2a4\ud15c\uc5d0 \ub300\ud55c \ub9c1\ud06c\uc785\ub2c8\ub2e4. \uc774 \ub9c1\ud06c\ub97c \ud1b5\ud574 \uc774\uc288\ub4e4(\ubc84\uadf8, \ud53c\uccd0, \ubcc0\uacbd\uc694\uccad)\uc744 \uc0dd\uc131\ud558\uace0 \uc870\ud68c\ud560 \uc218 \uc788\uc2b5\ub2c8\ub2e4.
 report.issue-management.general.intro                              = \uc774 \ud504\ub85c\uc81d\ud2b8\ub294 \uc774\uc288\ub4e4\uc744 \uad00\ub9ac\ud558\uae30 \uc704\ud574 \uc774\uc288\uad00\ub9ac\uc2dc\uc2a4\ud15c\uc744 \uc0ac\uc6a9\ud569\ub2c8\ub2e4.
 report.issue-management.intro                                      = \uc774\uc288, \ubc84\uadf8, \ud53c\uccd0 \uc694\uccad \uc0ac\ud56d\ub4e4\uc740 \uc774 \ud504\ub85c\uc81d\ud2b8\ub97c \uc704\ud55c \ub2e4\uc74c \uc774\uc288\uad00\ub9ac\uc2dc\uc2a4\ud15c\uc5d0 \uc81c\ucd9c\ud558\uc154\uc57c \ud569\ub2c8\ub2e4.
-report.issue-management.jira.intro                                 = \uc774 \ud504\ub85c\uc81d\ud2b8\ub294 J2EE \uae30\ubc18 \uc774\uc288 \ucd94\uc801 \ubc0f \ud504\ub85c\uc81d\ud2b8 \uad00\ub9ac \uc560\ud50c\ub9ac\ucf00\uc774\uc158\uc778 {JIRA, http://www.atlassian.com/software/jira}\ub97c \uc0ac\uc6a9\ud569\ub2c8\ub2e4.
+report.issue-management.jira.intro                                 = \uc774 \ud504\ub85c\uc81d\ud2b8\ub294 J2EE \uae30\ubc18 \uc774\uc288 \ucd94\uc801 \ubc0f \ud504\ub85c\uc81d\ud2b8 \uad00\ub9ac \uc560\ud50c\ub9ac\ucf00\uc774\uc158\uc778 {JIRA, https://www.atlassian.com/software/jira}\ub97c \uc0ac\uc6a9\ud569\ub2c8\ub2e4.
 report.issue-management.name                                       = \uc774\uc288 \ucd94\uc801
 report.issue-management.noissueManagement                          = \uc774\uc288\uad00\ub9ac\uc2dc\uc2a4\ud15c\uc774 \uc815\uc758\ub418\uc5b4 \uc788\uc9c0 \uc54a\uc2b5\ub2c8\ub2e4. \ub098\uc911\uc5d0 \ub2e4\uc2dc \ud655\uc778\ud574 \ubcf4\uc2ed\uc2dc\uc624.
 report.issue-management.overview.title                             = \uac1c\uc694
-report.issue-management.scarab.intro                               = \uc774 \ud504\ub85c\uc81d\ud2b8\ub294 {Scarab, http://scarab.tigris.org/}\uc744 \uc0ac\uc6a9\ud569\ub2c8\ub2e4.
+report.issue-management.scarab.intro                               = \uc774 \ud504\ub85c\uc81d\ud2b8\ub294 Scarab\uc744 \uc0ac\uc6a9\ud569\ub2c8\ub2e4.
 report.issue-management.title                                      = \uc774\uc288 \ucd94\uc801
 report.licenses.description                                        = \uc774\ub294 \ud504\ub85c\uc81d\ud2b8 \ub77c\uc774\uc13c\uc2a4\ub4e4\uc5d0 \ub300\ud55c \uc815\uc758\uc5d0 \ub300\ud55c \ub9c1\ud06c\uc785\ub2c8\ub2e4.
 report.licenses.name                                               = \ud504\ub85c\uc81d\ud2b8 \ub77c\uc774\uc13c\uc2a4
@@ -153,7 +153,7 @@ report.scm.general.intro                                           = \uc774 \ud5
 report.scm.name                                                    = \uc18c\uc2a4 \ub808\ud30c\uc9c0\ud1a0\ub9ac
 report.scm.noscm                                                   = \uc18c\uc2a4\uad00\ub9ac\uc2dc\uc2a4\ud15c\uc774 \uc815\uc758\ub418\uc5b4 \uc788\uc9c0 \uc54a\uc2b5\ub2c8\ub2e4. \ub098\uc911\uc5d0 \ub2e4\uc2dc \ud655\uc778\ud558\uc2ed\uc2dc\uc624.
 report.scm.overview.title                                          = \uac1c\uc694
-report.scm.svn.intro                                               = \uc774 \ud504\ub85c\uc81d\ud2b8\ub294 \uc18c\uc2a4 \ucf54\ub4dc \uad00\ub9ac\ub97c \uc704\ud574 {Subversion, http://subversion.apache.org/}\uc744 \uc0ac\uc6a9\ud569\ub2c8\ub2e4. Subversion \uc0ac\uc6a9\uc5d0 \ub300\ud55c \uc815\ubcf4\ub294 {http://svnbook.red-bean.com/, http://svnbook.red-bean.com/}\uc744 \ucc38\uc870\ud558\uc2ed\uc2dc\uc624.
+report.scm.svn.intro                                               = \uc774 \ud504\ub85c\uc81d\ud2b8\ub294 \uc18c\uc2a4 \ucf54\ub4dc \uad00\ub9ac\ub97c \uc704\ud574 {Subversion, https://subversion.apache.org/}\uc744 \uc0ac\uc6a9\ud569\ub2c8\ub2e4. Subversion \uc0ac\uc6a9\uc5d0 \ub300\ud55c \uc815\ubcf4\ub294 {https://svnbook.red-bean.com/, https://svnbook.red-bean.com/}\uc744 \ucc38\uc870\ud558\uc2ed\uc2dc\uc624.
 report.scm.title                                                   = \uc18c\uc2a4 \ub808\ud30c\uc9c0\ud1a0\ub9ac
 report.scm.webaccess.nourl                                         = \uc774 \ud504\ub85c\uc81d\ud2b8\uc758 \uc628\ub77c\uc778 \uc18c\uc2a4 \ub808\ud30c\uc9c0\ud1a0\ub9ac\uac00 \ud558\ub098\ub3c4 \uc5c6\uc2b5\ub2c8\ub2e4. \ub098\uc911\uc5d0 \ub2e4\uc2dc \ud655\uc778\ud558\uc2ed\uc2dc\uc624.
 report.scm.webaccess.title                                         = \uc6f9 \uc811\uadfc
