--- a/src/main/resources/project-info-reports_lt.properties
+++ b/src/main/resources/project-info-reports_lt.properties
@@ -16,17 +16,17 @@
 # under the License.
 
 report.ci-management.access                                        = Prieiga
-report.ci-management.anthill.intro                                 = \u0160is projektas naudoja {Anthill, http://www.anthillpro.com/html/products/anthillos/}.
-report.ci-management.bamboo.intro                                  = \u0160is projektas naudoja {Bamboo, http://www.atlassian.com/software/bamboo/}.
-report.ci-management.buildforge.intro                              = \u0160is projektas naudoja {Build Forge, http://www-306.ibm.com/software/awdtools/buildforge/enterprise/}.
-report.ci-management.continuum.intro                               = \u0160is projektas naudoja {Continuum, http://continuum.apache.org/}.
-report.ci-management.cruisecontrol.intro                           = \u0160is projektas naudoja {CruiseControl, http://cruisecontrol.sourceforge.net/}.
+report.ci-management.anthill.intro                                 = \u0160is projektas naudoja {Anthill, https://www.ibm.com/mysupport/s/topic/0TO50000000IQPaGAO/anthillpro?language=en_US}.
+report.ci-management.bamboo.intro                                  = \u0160is projektas naudoja {Bamboo, https://www.atlassian.com/software/bamboo/}.
+report.ci-management.buildforge.intro                              = \u0160is projektas naudoja {Build Forge, https://www.ibm.com/products/rational-build-forge}.
+report.ci-management.continuum.intro                               = \u0160is projektas naudoja {Continuum, https://continuum.apache.org/}.
+report.ci-management.cruisecontrol.intro                           = \u0160is projektas naudoja {CruiseControl, https://cruisecontrol.sourceforge.net/}.
 report.ci-management.description                                   = Nuoroda \u012f testinio integravimo apra\u0161us, kurie periodi\u0161kai vykdo programos surinkimui ir testavim\u0105.
 report.ci-management.general.intro                                 = \u0160is projektas naudoja testin\u0119 integravimo sistem\u0105.
 report.ci-management.github.intro                                  = \u0160is projektas naudoja {GitHub Actions, https://github.com/features/actions/}.
-report.ci-management.hudson.intro                                  = \u0160is projektas naudoja {Hudson, http://hudson-ci.org/}.
+report.ci-management.hudson.intro                                  = \u0160is projektas naudoja Hudson.
 report.ci-management.jenkins.intro                                 = \u0160is projektas naudoja {Jenkins, https://www.jenkins.io/}.
-report.ci-management.luntbuild.intro                               = \u0160is projektas naudoja {Luntbuild, http://luntbuild.javaforge.com/}.
+report.ci-management.luntbuild.intro                               = \u0160is projektas naudoja {Luntbuild, https://sourceforge.net/p/luntbuild/}.
 report.ci-management.teamcity.intro                                = \u0160is projektas naudoja {TeamCity, https://www.jetbrains.com/teamcity/}.
 report.ci-management.travis.intro                                  = \u0160is projektas naudoja {Travis CI, https://travis-ci.com/}.
 report.ci-management.name                                          = Testinis integravimas
@@ -113,16 +113,16 @@ report.dependency-convergence.stats.modules                        = Sub-project
 report.dependency-convergence.title                                = Reaktori\u0173 priklausomybi\u0173 konvergencijos
 report.index.nodescription                                         = \u0160iuo metu n\u0117ra apra\u0161ymo, susijusio su \u0161iuo projektu.
 report.index.title                                                 = Apie
-report.issue-management.bugzilla.intro                             = \u0160is projektas naudoja {Bugzilla, http://www.bugzilla.org/}.
+report.issue-management.bugzilla.intro                             = \u0160is projektas naudoja {Bugzilla, https://www.bugzilla.org/}.
 report.issue-management.custom.intro                               = \u0160is projektas naudoja %issueManagementSystem% problem\u0173 vadlymui.
 report.issue-management.description                                = Problem\u0173 valdymo sistema \u0161iam projektui. Klaidos, patobulinimai, pasi\u0173lymai gali b\u016bti kuriami \u010dia.
 report.issue-management.general.intro                              = \u0160is projektas naudoja problem\u0173 valdymo sistem\u0105 saugoti ir tvarkyti programoje esan\u010dias klaidas ir patobulinimus.
 report.issue-management.intro                                      = Pasi\u0173limai, klaidos, pasteb\u0117jimai turi b\u0173ti pateikti naudojantis problem\u0173 valdymo sistema.
-report.issue-management.jira.intro                                 = \u0160is projektas naudoja {JIRA, http://www.atlassian.com/software/jira} a J2EE-based, issue tracking and project management application.
+report.issue-management.jira.intro                                 = \u0160is projektas naudoja {JIRA, https://www.atlassian.com/software/jira} a J2EE-based, issue tracking and project management application.
 report.issue-management.name                                       = Problem\u0173 valdymas
 report.issue-management.noissueManagement                          = Problem\u0173 valdymo sistema n\u0117ra naudojama. Pra\u0161ome pabandyti v\u0117liau.
 report.issue-management.overview.title                             = \u012evadas
-report.issue-management.scarab.intro                               = \u0160is projektas naudoja  {Scarab, http://scarab.tigris.org/}.
+report.issue-management.scarab.intro                               = \u0160is projektas naudoja  Scarab.
 report.issue-management.title                                      = Problem\u0173 valdymas
 report.licenses.description                                        = Projekto licenzijos informacija ir licenzijos turinys
 report.licenses.name                                               = Projekto licenzija
@@ -167,7 +167,7 @@ report.scm.name                                                    = I\u0161eiti
 report.scm.noscm                                                   = N\u0117ra apra\u0161ytos SCM. Pra\u0161ome pabandyti v\u0117liau.
 report.scm.overview.title                                          = \u012evadas
 #report.scm.hg.intro
-report.scm.svn.intro                                               = \u0160is projektas naudoja {Subversion, http://subversion.apache.org/} sugoti ir organizuoti i\u0161eities kod\u0105. Papildomos informacijos apie Subversion galima rasti {http://svnbook.red-bean.com/, http://svnbook.red-bean.com/}.
+report.scm.svn.intro                                               = \u0160is projektas naudoja {Subversion, https://subversion.apache.org/} sugoti ir organizuoti i\u0161eities kod\u0105. Papildomos informacijos apie Subversion galima rasti {https://svnbook.red-bean.com/, https://svnbook.red-bean.com/}.
 report.scm.title                                                   = I\u0161eities kodo saugykla
 report.scm.webaccess.nourl                                         = N\u0117ra apa\u0161ytos internetin\u0117s web prieigos \u0161io projeto i\u0161eities kodo saugyklai. Pra\u0161ome pabandyti v\u0117liau.
 report.scm.webaccess.title                                         = Internetin\u0117 web prieiga
