--- a/src/main/resources/project-info-reports_no.properties
+++ b/src/main/resources/project-info-reports_no.properties
@@ -16,17 +16,17 @@
 # under the License.
 
 report.ci-management.access                                        = Tilgang
-report.ci-management.anthill.intro                                 = Dette prosjektet bruker {Anthill, http://www.anthillpro.com/html/products/anthillos/}.
-report.ci-management.bamboo.intro                                  = Dette prosjektet bruker {Bamboo, http://www.atlassian.com/software/bamboo/}.
-report.ci-management.buildforge.intro                              = Dette prosjektet bruker {Build Forge, http://www-306.ibm.com/software/awdtools/buildforge/enterprise/}.
-report.ci-management.continuum.intro                               = Dette prosjektet bruker {Continuum, http://continuum.apache.org/}.
-report.ci-management.cruisecontrol.intro                           = This project uses {CruiseControl, http://cruisecontrol.sourceforge.net/}.
+report.ci-management.anthill.intro                                 = Dette prosjektet bruker {Anthill, https://www.ibm.com/mysupport/s/topic/0TO50000000IQPaGAO/anthillpro?language=en_US}.
+report.ci-management.bamboo.intro                                  = Dette prosjektet bruker {Bamboo, https://www.atlassian.com/software/bamboo/}.
+report.ci-management.buildforge.intro                              = Dette prosjektet bruker {Build Forge, https://www.ibm.com/products/rational-build-forge}.
+report.ci-management.continuum.intro                               = Dette prosjektet bruker {Continuum, https://continuum.apache.org/}.
+report.ci-management.cruisecontrol.intro                           = This project uses {CruiseControl, https://cruisecontrol.sourceforge.net/}.
 report.ci-management.description                                   = Dette er en lenke til definisjoner av alle kontinuerlig intgrasjon prosesser som bygger og tester kode p\u00E5 ofte og regul\u00E6r basis.
 report.ci-management.general.intro                                 = Dette prosjektet bruker kontinuerlig bygge system.
 report.ci-management.github.intro                                  = Dette prosjektet bruker {GitHub Actions, https://github.com/features/actions/}.
-report.ci-management.hudson.intro                                  = Dette prosjektet bruker {Hudson, http://hudson-ci.org/}.
+report.ci-management.hudson.intro                                  = Dette prosjektet bruker Hudson.
 report.ci-management.jenkins.intro                                 = Dette prosjektet bruker {Jenkins, https://www.jenkins.io/}.
-report.ci-management.luntbuild.intro                               = Dette prosjektet bruker {Luntbuild, http://luntbuild.javaforge.com/}.
+report.ci-management.luntbuild.intro                               = Dette prosjektet bruker {Luntbuild, https://sourceforge.net/p/luntbuild/}.
 report.ci-management.teamcity.intro                                = Dette prosjektet bruker {TeamCity, https://www.jetbrains.com/teamcity/}.
 report.ci-management.travis.intro                                  = Dette prosjektet bruker {Travis CI, https://travis-ci.com/}.
 report.ci-management.name                                          = Kontinueriig integrasjon
@@ -85,16 +85,16 @@ report.dependency-convergence.stats.modules                        = Antall sub 
 report.dependency-convergence.title                                = Reactor Avhengighets sammenfall
 report.index.nodescription                                         = Det er for \u00F8yeblikket inegn beskrivelse forbundet med dette prosjektet.
 report.index.title                                                 = Om
-report.issue-management.bugzilla.intro                             = Dette prosjektet bruker  {Bugzilla, http://www.bugzilla.org/}.
+report.issue-management.bugzilla.intro                             = Dette prosjektet bruker  {Bugzilla, https://www.bugzilla.org/}.
 report.issue-management.custom.intro                               = Dette prosjektet bruker %issueManagementSystem% for \u00E5 handtere saker.
 report.issue-management.description                                = Dette er en lenke til saks handterings systemet for dette prosjektet. Saker (feil, forbedringer, endringsanmodninger) kan lages og sp\u00F8rres p\u00E5 via denne lenken.
 report.issue-management.general.intro                              = Dette prosjektet bruker et saks handterings system for \u00E5 administrere dets saker.
 report.issue-management.intro                                      = Saker, feil og forbedringsanmodninger b\u00F8r sendes til f\u00F8lgende saks handterings system for dette prosjektet.
-report.issue-management.jira.intro                                 = Dette prosjektet bruker {JIRA, http://www.atlassian.com/software/jira} a J2EE-based, issue tracking and project management application.
+report.issue-management.jira.intro                                 = Dette prosjektet bruker {JIRA, https://www.atlassian.com/software/jira} a J2EE-based, issue tracking and project management application.
 report.issue-management.name                                       = Sakshandtering
 report.issue-management.noissueManagement                          = Intet saks handterings system er definert. Vennligst sjekk igjen senere.
 report.issue-management.overview.title                             = Oversikt
-report.issue-management.scarab.intro                               = Dette prosjktet bruker  {Scarab, http://scarab.tigris.org/}.
+report.issue-management.scarab.intro                               = Dette prosjktet bruker  Scarab.
 report.issue-management.title                                      = Saks handtering
 report.licenses.description                                        = Dette er en lenke til definisjoner av prosjekt lisenser.
 report.licenses.name                                               = Prosjekt lisens
@@ -135,7 +135,7 @@ report.scm.general.intro                                           = Dette prosj
 report.scm.name                                                    = Kildekode repository
 report.scm.noscm                                                   = Intet kildekode handterings system er definert. Vennligst sjekk igjen senere.
 report.scm.overview.title                                          = Oversikt
-report.scm.svn.intro                                               = Dette prosjektet bruker  {Subversion, http://subversion.apache.org/} for \u00E5 handtere kildekoden. Instruksjoner om Subversion finnes p\u00E5 {http://svnbook.red-bean.com/, http://svnbook.red-bean.com/}.
+report.scm.svn.intro                                               = Dette prosjektet bruker  {Subversion, https://subversion.apache.org/} for \u00E5 handtere kildekoden. Instruksjoner om Subversion finnes p\u00E5 {https://svnbook.red-bean.com/, https://svnbook.red-bean.com/}.
 report.scm.title                                                   = Kildekode repository
 report.scm.webaccess.nourl                                         = Det er ingen online kildekode repository listet for dette prosjektet. Vennligst sjekk igjen senere.
 report.scm.webaccess.title                                         = Web aksess
