--- a/src/main/resources/project-info-reports_sk.properties
+++ b/src/main/resources/project-info-reports_sk.properties
@@ -16,17 +16,17 @@
 # under the License.
 
 report.ci-management.access                                        = Pr\u00edstup
-report.ci-management.anthill.intro                                 = Tento projekt pou\u017e\u00edva {Anthill, http://www.anthillpro.com/html/products/anthillos/}.
-report.ci-management.bamboo.intro                                  = Tento projekt pou\u017e\u00edva {Bamboo, http://www.atlassian.com/software/bamboo/}.
-report.ci-management.buildforge.intro                              = Tento projekt pou\u017e\u00edva {Build Forge, http://www-306.ibm.com/software/awdtools/buildforge/enterprise/}.
-report.ci-management.continuum.intro                               = Tento projekt pou\u017e\u00edva {Continuum, http://continuum.apache.org/}.
-report.ci-management.cruisecontrol.intro                           = Tento projekt pou\u017e\u00edva {CruiseControl, http://cruisecontrol.sourceforge.net/}.
+report.ci-management.anthill.intro                                 = Tento projekt pou\u017e\u00edva {Anthill, https://www.ibm.com/mysupport/s/topic/0TO50000000IQPaGAO/anthillpro?language=en_US}.
+report.ci-management.bamboo.intro                                  = Tento projekt pou\u017e\u00edva {Bamboo, https://www.atlassian.com/software/bamboo/}.
+report.ci-management.buildforge.intro                              = Tento projekt pou\u017e\u00edva {Build Forge, https://www.ibm.com/products/rational-build-forge}.
+report.ci-management.continuum.intro                               = Tento projekt pou\u017e\u00edva {Continuum, https://continuum.apache.org/}.
+report.ci-management.cruisecontrol.intro                           = Tento projekt pou\u017e\u00edva {CruiseControl, https://cruisecontrol.sourceforge.net/}.
 report.ci-management.description                                   = Nasledovn\u00e1 linka odkazuje na defin\u00edcie v\u0161etk\u00fdch procesov zaregistrovan\u00fdch v integra\u010dnom syst\u00e9me, ktor\u00e9 pravidelne builduj\u00fa a testuj\u00fa k\u00f3d.
 report.ci-management.general.intro                                 = Tento projekt pou\u017e\u00edva Continuous Integration System (priebe\u017en\u00fd integra\u010dn\u00fd syst\u00e9m).
 report.ci-management.github.intro                                  = Tento projekt pou\u017E\u00EDva {GitHub Actions, https://github.com/features/actions/}.
-report.ci-management.hudson.intro                                  = Tento projekt pou\u017e\u00edva {Hudson, http://hudson-ci.org/}.
+report.ci-management.hudson.intro                                  = Tento projekt pou\u017e\u00edva Hudson.
 report.ci-management.jenkins.intro                                 = Tento projekt pou\u017e\u00edva {Jenkins, https://www.jenkins.io/}.
-report.ci-management.luntbuild.intro                               = Tento projekt pou\u017e\u00edva {Luntbuild, http://luntbuild.javaforge.com/}.
+report.ci-management.luntbuild.intro                               = Tento projekt pou\u017e\u00edva {Luntbuild, https://sourceforge.net/p/luntbuild/}.
 report.ci-management.teamcity.intro                                = Tento projekt pou\u017e\u00edva {TeamCity, https://www.jetbrains.com/teamcity/}.
 report.ci-management.travis.intro                                  = Tento projekt pou\u017e\u00edva {Travis CI, https://travis-ci.com/}.
 report.ci-management.name                                          = Syst\u00e9m priebe\u017enej integr\u00e1cie (Continuous Integration)
@@ -101,16 +101,16 @@ report.dependency-convergence.stats.modules                        = Po\u010det 
 report.dependency-convergence.title                                = Konvergencia z\u00e1vislost\u00ed
 report.index.nodescription                                         = Projekt nem\u00e1 moment\u00e1lne \u017eiadny popis.
 report.index.title                                                 = Inform\u00e1cie
-report.issue-management.bugzilla.intro                             = Tento projekt pou\u017e\u00edva {Bugzillu, http://www.bugzilla.org/}.
+report.issue-management.bugzilla.intro                             = Tento projekt pou\u017e\u00edva {Bugzilla, https://www.bugzilla.org/}.
 report.issue-management.custom.intro                               = Tento projekt pou\u017e\u00edva %issueManagementSystem% pre mene\u017ement probl\u00e9mov.
 report.issue-management.description                                = Adresa syst\u00e9mu sledovania probl\u00e9mov, spravuj\u00faceho tento projekt. Probl\u00e9my (chyby, nov\u00e9 vlastnosti, zmeny, n\u00e1vrhy) m\u00f4\u017eu by\u0165 vytvoren\u00e9 a s\u00fa dostupn\u00e9 na tejto adrese.
 report.issue-management.general.intro                              = Tento projekt pou\u017e\u00edva syst\u00e9m mene\u017ementu probl\u00e9mov.
 report.issue-management.intro                                      = Probl\u00e9my, chyby a po\u017eiadavky na nov\u00fa funkcionalitu by mali by\u0165 zaregistrovan\u00e9 do nasledovn\u00e9ho syst\u00e9mu na sledovanie probl\u00e9mov.
-report.issue-management.jira.intro                                 = Tento projekt pou\u017e\u00edva {JIRA, http://www.atlassian.com/software/jira} - aplik\u00e1ciu postaven\u00fa na J2EE, sl\u00fa\u017eiacu na sledovanie probl\u00e9mov a mene\u017eovanie projektov.
+report.issue-management.jira.intro                                 = Tento projekt pou\u017e\u00edva {JIRA, https://www.atlassian.com/software/jira} - aplik\u00e1ciu postaven\u00fa na J2EE, sl\u00fa\u017eiacu na sledovanie probl\u00e9mov a mene\u017eovanie projektov.
 report.issue-management.name                                       = Syst\u00e9m sledovania probl\u00e9mov
 report.issue-management.noissueManagement                          = \u017diadny syst\u00e9m na sledovanie probl\u00e9mov nie je definovan\u00fd. Pros\u00edm sk\u00faste nesk\u00f4r.
 report.issue-management.overview.title                             = Preh\u013ead
-report.issue-management.scarab.intro                               = Tento projekt pou\u017e\u00edva {Scarab, http://scarab.tigris.org/}.
+report.issue-management.scarab.intro                               = Tento projekt pou\u017e\u00edva Scarab.
 report.issue-management.title                                      = Syst\u00e9m sledovania probl\u00e9mov
 report.licenses.description                                        = Linky na obsahy projektov\u00fdch licenci\u00ed.
 report.licenses.name                                               = Licencie projektu
@@ -151,7 +151,7 @@ report.scm.general.intro                                           = Projekt pou
 report.scm.name                                                    = Repozit\u00e1r zdrojov\u00fdch k\u00f3dov
 report.scm.noscm                                                   = \u017diadny syst\u00e9m spr\u00e1vy zdrojov\u00fdch s\u00faborov (SCM) nebol definovan\u00fd. Pros\u00edm sk\u00faste nesk\u00f4r.
 report.scm.overview.title                                          = Preh\u013ead
-report.scm.svn.intro                                               = Projekt pou\u017e\u00edva {Subversion, http://subversion.apache.org/} na mene\u017ement zdrojov\u00fdch k\u00f3dov. N\u00e1vod na pou\u017e\u00edvanie Subversion m\u00f4\u017eete n\u00e1js\u0165 na str\u00e1nke {http://svnbook.red-bean.com/, http://svnbook.red-bean.com/}.
+report.scm.svn.intro                                               = Projekt pou\u017e\u00edva {Subversion, https://subversion.apache.org/} na mene\u017ement zdrojov\u00fdch k\u00f3dov. N\u00e1vod na pou\u017e\u00edvanie Subversion m\u00f4\u017eete n\u00e1js\u0165 na str\u00e1nke {https://svnbook.red-bean.com/, https://svnbook.red-bean.com/}.
 report.scm.title                                                   = Repozit\u00e1r zdrojov\u00fdch k\u00f3dov
 report.scm.webaccess.nourl                                         = Nie s\u00fa definovan\u00e9 \u017eiadne repozit\u00e1re zdrojov\u00fdch k\u00f3dov. Pros\u00edm sk\u00faste nesk\u00f4r.
 report.scm.webaccess.title                                         = Pr\u00edstup cez Web
