--- a/src/main/resources/project-info-reports_sv.properties
+++ b/src/main/resources/project-info-reports_sv.properties
@@ -16,17 +16,17 @@
 # under the License.
 
 report.ci-management.access                                        = \u00c5tkomst
-report.ci-management.anthill.intro                                 = Detta projekt anv\u00e4nder {Anthill, http://www.anthillpro.com/html/products/anthillos/}.
-report.ci-management.bamboo.intro                                  = Detta projekt anv\u00e4nder {Bamboo, http://www.atlassian.com/software/bamboo/}.
-report.ci-management.buildforge.intro                              = Detta projekt anv\u00e4nder {Build Forge, http://www-306.ibm.com/software/awdtools/buildforge/enterprise/}.
-report.ci-management.continuum.intro                               = Detta projekt anv\u00e4nder {Continuum, http://continuum.apache.org/}.
-report.ci-management.cruisecontrol.intro                           = Detta projekt anv\u00e4nder {CruiseControl, http://cruisecontrol.sourceforge.net/}.
+report.ci-management.anthill.intro                                 = Detta projekt anv\u00e4nder {Anthill, https://www.ibm.com/mysupport/s/topic/0TO50000000IQPaGAO/anthillpro?language=en_US}.
+report.ci-management.bamboo.intro                                  = Detta projekt anv\u00e4nder {Bamboo, https://www.atlassian.com/software/bamboo/}.
+report.ci-management.buildforge.intro                              = Detta projekt anv\u00e4nder {Build Forge, https://www.ibm.com/products/rational-build-forge}.
+report.ci-management.continuum.intro                               = Detta projekt anv\u00e4nder {Continuum, https://continuum.apache.org/}.
+report.ci-management.cruisecontrol.intro                           = Detta projekt anv\u00e4nder {CruiseControl, https://cruisecontrol.sourceforge.net/}.
 report.ci-management.description                                   = Detta \u00e4r en l\u00e4nk till definitionen av alla continuous integration-processer som bygger och testar kod p\u00e5 regelbunden basis.
 report.ci-management.general.intro                                 = Detta projekt anv\u00e4nder ett continuous integration-system.
 report.ci-management.github.intro                                  = Detta projekt anv\u00E4nder {GitHub Actions, https://github.com/features/actions/}.
-report.ci-management.hudson.intro                                  = Detta projekt anv\u00e4nder {Hudson, http://hudson-ci.org/}.
+report.ci-management.hudson.intro                                  = Detta projekt anv\u00e4nder Hudson.
 report.ci-management.jenkins.intro                                 = Detta projekt anv\u00e4nder {Jenkins, https://www.jenkins.io/}.
-report.ci-management.luntbuild.intro                               = Detta projekt anv\u00e4nder {Luntbuild, http://luntbuild.javaforge.com/}.
+report.ci-management.luntbuild.intro                               = Detta projekt anv\u00e4nder {Luntbuild, https://sourceforge.net/p/luntbuild/}.
 report.ci-management.teamcity.intro                                = Detta projekt anv\u00e4nder {TeamCity, https://www.jetbrains.com/teamcity/}.
 report.ci-management.travis.intro                                  = Detta projekt anv\u00e4nder {Travis CI, https://travis-ci.com/}.
 report.ci-management.name                                          = Continuous Integration
@@ -115,16 +115,16 @@ report.dependency-convergence.title                                = Beroendekon
 report.dependency-info.description                                 = Detta dokument beskriver hur man l\u00e4gger till ett beroende till detta projekts huvudartefakt med olika beroendehanteringsverktyg.
 report.index.nodescription                                         = Det finns ingen beskrivning f\u00f6r detta projekt.
 report.index.title                                                 = Om
-report.issue-management.bugzilla.intro                             = Detta projekt anv\u00e4nder {Bugzilla, http://www.bugzilla.org/}.
+report.issue-management.bugzilla.intro                             = Detta projekt anv\u00e4nder {Bugzilla, https://www.bugzilla.org/}.
 report.issue-management.custom.intro                               = Detta projekt anv\u00e4nder %issueManagementSystem% f\u00f6r \u00e4rendehantering.
 report.issue-management.description                                = Detta \u00e4r en l\u00e4nk till \u00e4rendehanteringssystemet som projektet anv\u00e4nder. \u00c4renden (buggrapporter, \u00e4ndrings\u00f6nskem\u00e5l) kan skapas och l\u00e4sas via denna l\u00e4nk.
 report.issue-management.general.intro                              = Detta projekt anv\u00e4nder ett \u00e4rendehanteringssystem f\u00f6r att hantera sina \u00e4renden.
 report.issue-management.intro                                      = \u00c4renden, buggar och \u00f6nskem\u00e5l om ny funktionalitet skall l\u00e4mnas via f\u00f6ljande \u00e4rendehanteringssystem f\u00f6r detta projekt.
-report.issue-management.jira.intro                                 = Detta projekt anv\u00e4nder {JIRA, http://www.atlassian.com/software/jira} ett J2EE-baserat, \u00e4rende- and projekthanteringssystem.
+report.issue-management.jira.intro                                 = Detta projekt anv\u00e4nder {JIRA, https://www.atlassian.com/software/jira} ett J2EE-baserat, \u00e4rende- and projekthanteringssystem.
 report.issue-management.name                                       = \u00c4rendehantering
 report.issue-management.noissueManagement                          = Inget \u00e4rendehanteringssystem definerat. \u00c5terkom senare.
 report.issue-management.overview.title                             = \u00d6versikt
-report.issue-management.scarab.intro                               = Detta projekt anv\u00e4nder {Scarab, http://scarab.tigris.org/}.
+report.issue-management.scarab.intro                               = Detta projekt anv\u00e4nder Scarab.
 report.issue-management.title                                      = \u00c4rendehantering
 report.licenses.description                                        = Detta \u00e4r en l\u00e4nk till projektets licenser.
 report.licenses.name                                               = Projektlicens
@@ -152,12 +152,12 @@ report.scm.accessthroughtproxy.svn.intro2                          = I filen fin
 report.scm.accessthroughtproxy.svn.intro3                          = Exempel: Redigera 'servers' filen och l\u00e4gg till n\u00e5got i stil med:
 report.scm.accessthroughtproxy.title                               = \u00c5tkomst genom proxy
 report.scm.anonymousaccess.general.intro                           = L\u00e4s dokumentationen f\u00f6r versionshanteringssystemet som anv\u00e4nds f\u00f6r mer information om anonym utcheckning. Anslutnings-URL:en \u00e4r:
-report.scm.anonymousaccess.hg.intro                                = K\u00e4llkoden kan checkas ut anonymt fr\u00e5n Mercurial med detta kommando (Se {http://www.selenic.com/mercurial/hg.1.html#clone,http://www.selenic.com/mercurial/hg.1.html#clone}):
+report.scm.anonymousaccess.hg.intro                                = K\u00e4llkoden kan checkas ut anonymt fr\u00e5n Mercurial med detta kommando (Se {https://www.selenic.com/mercurial/hg.1.html#clone,https://www.selenic.com/mercurial/hg.1.html#clone}):
 report.scm.anonymousaccess.svn.intro                               = K\u00e4llkoden kan checkas ut anonymt fr\u00e5n Subversion-repositoriet med f\u00f6ljande kommando:
 report.scm.anonymousaccess.title                                   = Anonym \u00e5tkomst
 report.scm.description                                             = Detta \u00e4r en l\u00e4nk till versionshanteringssystemet som kan anv\u00e4ndas via webbl\u00e4saren.
 report.scm.devaccess.general.intro                                 = L\u00e4s versionshanteringssystemets dokumentation f\u00f6r mer information om hur du kan checka ut en arbetskopia. Anslutnings-URL:en \u00e4r:
-report.scm.devaccess.hg.intro                                      = Enbart projektets utvecklare kan komma \u00e5t Mercurial-tr\u00e4det med denna metod. (Se {http://www.selenic.com/mercurial/hg.1.html#clone,http://www.selenic.com/mercurial/hg.1.html#clone}).
+report.scm.devaccess.hg.intro                                      = Enbart projektets utvecklare kan komma \u00e5t Mercurial-tr\u00e4det med denna metod. (Se {https://www.selenic.com/mercurial/hg.1.html#clone,https://www.selenic.com/mercurial/hg.1.html#clone}).
 report.scm.devaccess.svn.intro1.https                              = Alla kan komma \u00e5t Subversion-repositoriet via HTTP men utvecklare (som vill kunna checka in) m\u00e5ste checka ut koden via HTTPS.
 report.scm.devaccess.svn.intro1.other                              = Utvecklare (som vill kunna checka in) m\u00e5ste checka ut koden.
 report.scm.devaccess.svn.intro1.svn                                = utvecklare (som vill kunna checka in) m\u00e5ste checka ut koden via SVN.
@@ -168,8 +168,8 @@ report.scm.general.intro                                           = Detta proje
 report.scm.name                                                    = Versionshantering
 report.scm.noscm                                                   = Inget versionshanteringssystem \u00e4r definierat. \u00c5terkom senare.
 report.scm.overview.title                                          = \u00d6versikt
-report.scm.hg.intro                                                = Detta projekt anv\u00e4nder {Mercurial, https://www.mercurial-scm.org/} f\u00f6r versionshantering av k\u00e4llkoden. Mer information om hur man anv\u00e4nder Mercurial finns h\u00e4r {http://hgbook.red-bean.com/read/, http://hgbook.red-bean.com/read/}.
-report.scm.svn.intro                                               = Detta projekt anv\u00e4nder {Subversion, http://subversion.apache.org/} f\u00f6r versionshantering av k\u00e4llkoden. Mer information om hur man anv\u00e4nder Subversion finns h\u00e4r {http://svnbook.red-bean.com/, http://svnbook.red-bean.com/}.
+report.scm.hg.intro                                                = Detta projekt anv\u00e4nder {Mercurial, https://www.mercurial-scm.org/} f\u00f6r versionshantering av k\u00e4llkoden. Mer information om hur man anv\u00e4nder Mercurial finns h\u00e4r {https://hgbook.red-bean.com/read/, https://hgbook.red-bean.com/read/}.
+report.scm.svn.intro                                               = Detta projekt anv\u00e4nder {Subversion, https://subversion.apache.org/} f\u00f6r versionshantering av k\u00e4llkoden. Mer information om hur man anv\u00e4nder Subversion finns h\u00e4r {https://svnbook.red-bean.com/, https://svnbook.red-bean.com/}.
 report.scm.title                                                   = Versionshantering
 report.scm.webaccess.nourl                                         = Det finns ingen webb\u00e5tkomst till versionshanteringssystemet definerat f\u00f6r detta projekt. \u00c5terkom senare.
 report.scm.webaccess.title                                         = Web\u00e5tkomst
