--- a/src/main/resources/project-info-reports_tr.properties
+++ b/src/main/resources/project-info-reports_tr.properties
@@ -16,17 +16,17 @@
 # under the License.
 
 report.ci-management.access                                        = Eri\u00feim
-report.ci-management.anthill.intro                                 = This project uses {Anthill, http://www.anthillpro.com/html/products/anthillos/}.
-report.ci-management.bamboo.intro                                  = This project uses {Bamboo, http://www.atlassian.com/software/bamboo/}.
-report.ci-management.buildforge.intro                              = This project uses {Build Forge, http://www-306.ibm.com/software/awdtools/buildforge/enterprise/}.
-report.ci-management.continuum.intro                               = Bu proje Continuum uygulamas\u00fdn\u00fd kullan\u00fdr {Continuum, http://continuum.apache.org/}.
-report.ci-management.cruisecontrol.intro                           = This project uses {CruiseControl, http://cruisecontrol.sourceforge.net/}.
+report.ci-management.anthill.intro                                 = This project uses {Anthill, https://www.ibm.com/mysupport/s/topic/0TO50000000IQPaGAO/anthillpro?language=en_US}.
+report.ci-management.bamboo.intro                                  = This project uses {Bamboo, https://www.atlassian.com/software/bamboo/}.
+report.ci-management.buildforge.intro                              = This project uses {Build Forge, https://www.ibm.com/products/rational-build-forge}.
+report.ci-management.continuum.intro                               = Bu proje Continuum uygulamas\u00fdn\u00fd kullan\u00fdr {Continuum, https://continuum.apache.org/}.
+report.ci-management.cruisecontrol.intro                           = This project uses {CruiseControl, https://cruisecontrol.sourceforge.net/}.
 report.ci-management.description                                   = Bu link kodlar\u00fd s\u00fdk aral\u00fdklarla ve belirli bir temelde derleyen ve test eden t\u00fcm s\u00fcrekli entegrasyon proseslerine eri\u00feim sa\u00f0lar.
 report.ci-management.general.intro                                 = Bu proje S\u00fcrekli Entegrasyon Sistemi uygulamas\u00fdn\u00fd kullan\u00fdr.
 report.ci-management.github.intro                                  = This project uses {GitHub Actions, https://github.com/features/actions/}.
-report.ci-management.hudson.intro                                  = This project uses {Hudson, http://hudson-ci.org/}.
+report.ci-management.hudson.intro                                  = This project uses Hudson.
 report.ci-management.jenkins.intro                                 = This project uses {Jenkins, https://www.jenkins.io/}.
-report.ci-management.luntbuild.intro                               = This project uses {Luntbuild, http://luntbuild.javaforge.com/}.
+report.ci-management.luntbuild.intro                               = This project uses {Luntbuild, https://sourceforge.net/p/luntbuild/}.
 report.ci-management.teamcity.intro                                = This project uses {TeamCity, https://www.jetbrains.com/teamcity/}.
 report.ci-management.travis.intro                                  = This project uses {Travis CI, https://travis-ci.com/}.
 report.ci-management.name                                          = S\u00fcrekli Entegrasyon
@@ -101,16 +101,16 @@ report.dependency-convergence.stats.modules                        = Number of s
 report.dependency-convergence.title                                = Reactor Dependency Convergence
 report.index.nodescription                                         = There is currently no description associated with this project.
 report.index.title                                                 = About
-report.issue-management.bugzilla.intro                             = This project uses {Bugzilla, http://www.bugzilla.org/}.
+report.issue-management.bugzilla.intro                             = This project uses {Bugzilla, https://www.bugzilla.org/}.
 report.issue-management.custom.intro                               = This project uses %issueManagementSystem% to manage its issues.
 report.issue-management.description                                = This is a link to the issue management system for this project. Issues (bugs, features, change requests) can be created and queried using this link.
 report.issue-management.general.intro                              = This project uses an Issue Management System to manage its issues.
 report.issue-management.intro                                      = Issues, bugs, and feature requests should be submitted to the following issue tracking system for this project.
-report.issue-management.jira.intro                                 = This project uses {JIRA, http://www.atlassian.com/software/jira} a J2EE-based, issue tracking and project management application.
+report.issue-management.jira.intro                                 = This project uses {JIRA, https://www.atlassian.com/software/jira} a J2EE-based, issue tracking and project management application.
 report.issue-management.name                                       = Issue Tracking
 report.issue-management.noissueManagement                          = No issue management system is defined. Please check back at a later date.
 report.issue-management.overview.title                             = Overview
-report.issue-management.scarab.intro                               = This project uses {Scarab, http://scarab.tigris.org/}.
+report.issue-management.scarab.intro                               = This project uses Scarab.
 report.issue-management.title                                      = Issue Tracking
 report.licenses.description                                        = This is a link to the definitions of project licenses.
 report.licenses.name                                               = Project License
@@ -151,7 +151,7 @@ report.scm.general.intro                                           = This projec
 report.scm.name                                                    = Source Repository
 report.scm.noscm                                                   = No source configuration management system is defined. Please check back at a later date.
 report.scm.overview.title                                          = Overview
-report.scm.svn.intro                                               = This project uses {Subversion, http://subversion.apache.org/} to manage its source code. Instructions on Subversion use can be found at {http://svnbook.red-bean.com/, http://svnbook.red-bean.com/}.
+report.scm.svn.intro                                               = This project uses {Subversion, https://subversion.apache.org/} to manage its source code. Instructions on Subversion use can be found at {https://svnbook.red-bean.com/, https://svnbook.red-bean.com/}.
 report.scm.title                                                   = Source Repository
 report.scm.webaccess.nourl                                         = There is no online source repository listed for this project. Please check back again later.
 report.scm.webaccess.title                                         = Web Access
