--- a/src/main/resources/project-info-reports_fr.properties
+++ b/src/main/resources/project-info-reports_fr.properties
@@ -16,17 +16,17 @@
 # under the License.
 
 report.ci-management.access                                        = Acc\u00e8s
-report.ci-management.anthill.intro                                 = Ce projet utilise {Anthill, http://www.anthillpro.com/html/products/anthillos/}.
-report.ci-management.bamboo.intro                                  = Ce projet utilise {Bamboo, http://www.atlassian.com/software/bamboo/}.
-report.ci-management.buildforge.intro                              = Ce projet utilise {Build Forge, http://www-306.ibm.com/software/awdtools/buildforge/enterprise/}.
-report.ci-management.continuum.intro                               = Ce projet utilise {Continuum, http://continuum.apache.org/}.
-report.ci-management.cruisecontrol.intro                           = Ce projet utilise {CruiseControl, http://cruisecontrol.sourceforge.net/}.
+report.ci-management.anthill.intro                                 = Ce projet utilise {Anthill, https://www.ibm.com/mysupport/s/topic/0TO50000000IQPaGAO/anthillpro?language=en_US}.
+report.ci-management.bamboo.intro                                  = Ce projet utilise {Bamboo, https://www.atlassian.com/software/bamboo/}.
+report.ci-management.buildforge.intro                              = Ce projet utilise {Build Forge, https://www.ibm.com/products/rational-build-forge}.
+report.ci-management.continuum.intro                               = Ce projet utilise {Continuum, https://continuum.apache.org/}.
+report.ci-management.cruisecontrol.intro                           = Ce projet utilise {CruiseControl, https://cruisecontrol.sourceforge.net/}.
 report.ci-management.description                                   = C'est un lien au syst\u00e8me d'int\u00e9gration continue pour ce projet qui construit et teste le code de mani\u00e8re fr\u00e9quente.
 report.ci-management.general.intro                                 = Ce projet utilise un syst\u00e8me d'int\u00e9gration continue.
 report.ci-management.github.intro                                  = Ce projet utilise {GitHub Actions, https://github.com/features/actions/}.
-report.ci-management.hudson.intro                                  = Ce projet utilise {Hudson, http://hudson-ci.org/}.
+report.ci-management.hudson.intro                                  = Ce projet utilise Hudson.
 report.ci-management.jenkins.intro                                 = Ce projet utilise {Jenkins, https://www.jenkins.io/}.
-report.ci-management.luntbuild.intro                               = Ce projet utilise {Luntbuild, http://luntbuild.javaforge.com/}.
+report.ci-management.luntbuild.intro                               = Ce projet utilise {Luntbuild, https://sourceforge.net/p/luntbuild/}.
 report.ci-management.teamcity.intro                                = Ce projet utilise {TeamCity, https://www.jetbrains.com/teamcity/}.
 report.ci-management.travis.intro                                  = Ce projet utilise {Travis CI, https://travis-ci.com/}.
 report.ci-management.name                                          = Int\u00e9gration continue
@@ -122,16 +122,16 @@ report.dependency-info.title                                       = Coordonn\u0
 report.dependency-info.description                                 = Ce document pr\u00e9sente la mani\u00e8re d'ajouter ce projet en tant que d\u00e9pendance avec diff\u00e9rents outils de gestion des d\u00e9pendances.
 report.index.nodescription                                         = Il n'y a aucune description actuellement li\u00e9e \u00e0 ce projet.
 report.index.title                                                 = Bienvenue dans le projet
-report.issue-management.bugzilla.intro                             = Ce projet utilise {Bugzilla, http://www.bugzilla.org/}.
+report.issue-management.bugzilla.intro                             = Ce projet utilise {Bugzilla, https://www.bugzilla.org/}.
 report.issue-management.custom.intro                               = Ce projet utilise %issueManagementSystem% pour g\u00e9rer ses issues.
 report.issue-management.description                                = C'est un lien au syst\u00e8me de contr\u00f4le des livraisons pour ce projet. Des issues (bogues, dispositifs, demandes de changement) peuvent \u00eatre cr\u00e9\u00e9es et consult\u00e9es en utilisant ce lien.
 report.issue-management.general.intro                              = Ce projet utilise syst\u00e8me de contr\u00f4le des livraisons pour g\u00e9rer ces issues.
 report.issue-management.intro                                      = Des issues (bogues, dispositifs, demandes de changement) peuvent \u00eatre cr\u00e9\u00e9es et consult\u00e9es en utilisant ce lien.
-report.issue-management.jira.intro                                 = Ce projet utilise {JIRA, http://www.atlassian.com/software/jira}, une application J2EE de contr\u00f4le des livraisons et de gestion de projet.
+report.issue-management.jira.intro                                 = Ce projet utilise {JIRA, https://www.atlassian.com/software/jira}, une application J2EE de contr\u00f4le des livraisons et de gestion de projet.
 report.issue-management.name                                       = Contr\u00f4le des livraisons
 report.issue-management.noissueManagement                          = Aucun syst\u00e8me de contr\u00f4le des livraisons n'est d\u00e9fini. V\u00e9rifiez plus tard si un syst\u00e8me de contr\u00f4le des livraisons a \u00e9t\u00e9 ajout\u00e9.
 report.issue-management.overview.title                             = Vue d'ensemble
-report.issue-management.scarab.intro                               = Ce projet utilise {Scarab, http://scarab.tigris.org/}.
+report.issue-management.scarab.intro                               = Ce projet utilise Scarab.
 report.issue-management.title                                      = Contr\u00f4le des livraisons
 report.licenses.description                                        = C'est un lien \u00e0 la licence du projet.
 report.licenses.multiple                                           = Ce projet est publi\u00e9 sous plusieurs licences\u202f:
@@ -175,7 +175,7 @@ report.scm.general.intro                                           = Ce projet u
 report.scm.name                                                    = D\u00e9p\u00f4t de sources
 report.scm.noscm                                                   = Aucun syst\u00e8me de d\u00e9p\u00f4t SCM n'est d\u00e9fini. V\u00e9rifiez plus tard si un SCM a \u00e9t\u00e9 ajout\u00e9.
 report.scm.overview.title                                          = Vue d'ensemble
-report.scm.svn.intro                                               = Ce projet utilise {Subversion, http://subversion.apache.org/} pour g\u00e9rer son code source. Des instructions sur l''utilisation de Subversion peuvent \u00eatre trouv\u00e9es sur {http://svnbook.red-bean.com/, http://svnbook.red-bean.com/}.
+report.scm.svn.intro                                               = Ce projet utilise {Subversion, https://subversion.apache.org/} pour g\u00e9rer son code source. Des instructions sur l''utilisation de Subversion peuvent \u00eatre trouv\u00e9es sur {https://svnbook.red-bean.com/, https://svnbook.red-bean.com/}.
 report.scm.title                                                   = D\u00e9p\u00f4t de sources
 report.scm.webaccess.nourl                                         = Aucun lien au syst\u00e8me de d\u00e9p\u00f4t SCM n'est d\u00e9fini. V\u00e9rifiez plus tard si ce lien a \u00e9t\u00e9 ajout\u00e9.
 report.scm.webaccess.title                                         = Acc\u00e8s Web
