--- a/src/main/resources/project-info-reports_it.properties
+++ b/src/main/resources/project-info-reports_it.properties
@@ -16,15 +16,15 @@
 # under the License.
 
 report.ci-management.access                                        = Accesso
-report.ci-management.anthill.intro                                 = Questo progetto usa {Anthill, http://www.anthillpro.com/html/products/anthillos/}.
-report.ci-management.bamboo.intro                                  = Questo progetto usa {Bamboo, http://www.atlassian.com/software/bamboo/}.
-report.ci-management.buildforge.intro                              = Questo progetto usa {Build Forge, http://www-306.ibm.com/software/awdtools/buildforge/enterprise/}.
-report.ci-management.continuum.intro                               = Questo progetto usa {Continuum, http://continuum.apache.org/}.
-report.ci-management.cruisecontrol.intro                           = Questo progetto usa {CruiseControl, http://cruisecontrol.sourceforge.net/}.
+report.ci-management.anthill.intro                                 = Questo progetto usa {Anthill, https://www.ibm.com/mysupport/s/topic/0TO50000000IQPaGAO/anthillpro?language=en_US}.
+report.ci-management.bamboo.intro                                  = Questo progetto usa {Bamboo, https://www.atlassian.com/software/bamboo/}.
+report.ci-management.buildforge.intro                              = Questo progetto usa {Build Forge, https://www.ibm.com/products/rational-build-forge}.
+report.ci-management.continuum.intro                               = Questo progetto usa {Continuum, https://continuum.apache.org/}.
+report.ci-management.cruisecontrol.intro                           = Questo progetto usa {CruiseControl, https://cruisecontrol.sourceforge.net/}.
 report.ci-management.github.intro                                  = Questo progetto usa {GitHub Actions, https://github.com/features/actions/}.
-report.ci-management.hudson.intro                                  = Questo progetto usa {Hudson, http://hudson-ci.org/}.
+report.ci-management.hudson.intro                                  = Questo progetto usa Hudson.
 report.ci-management.jenkins.intro                                 = Questo progetto usa {Jenkins, https://www.jenkins.io/}.
-report.ci-management.luntbuild.intro                               = Questo progetto usa {Luntbuild, http://luntbuild.javaforge.com/}.
+report.ci-management.luntbuild.intro                               = Questo progetto usa {Luntbuild, https://sourceforge.net/p/luntbuild/}.
 report.ci-management.teamcity.intro                                = Questo progetto usa {TeamCity, https://www.jetbrains.com/teamcity/}.
 report.ci-management.travis.intro                                  = Questo progetto usa {Travis CI, https://travis-ci.com/}.
 report.dependencies.graph.tables.licenses                          = Licenze
