--- a/src/main/resources/project-info-reports_nl.properties
+++ b/src/main/resources/project-info-reports_nl.properties
@@ -15,17 +15,17 @@
 # specific language governing permissions and limitations
 # under the License.
 
-report.ci-management.anthill.intro                                 = Dit project gebruikt {Anthill, http://www.anthillpro.com/html/products/anthillos/}.
-report.ci-management.bamboo.intro                                  = Dit project gebruikt {Bamboo, http://www.atlassian.com/software/bamboo/}.
-report.ci-management.buildforge.intro                              = Dit project gebruikt {Build Forge, http://www-306.ibm.com/software/awdtools/buildforge/enterprise/}.
-report.ci-management.continuum.intro                               = Dit project gebruikt {Continuum, http://continuum.apache.org/}.
-report.ci-management.cruisecontrol.intro                           = Dit project gebruikt {CruiseControl, http://cruisecontrol.sourceforge.net/}.
+report.ci-management.anthill.intro                                 = Dit project gebruikt {Anthill, https://www.ibm.com/mysupport/s/topic/0TO50000000IQPaGAO/anthillpro?language=en_US}.
+report.ci-management.bamboo.intro                                  = Dit project gebruikt {Bamboo, https://www.atlassian.com/software/bamboo/}.
+report.ci-management.buildforge.intro                              = Dit project gebruikt {Build Forge, https://www.ibm.com/products/rational-build-forge}.
+report.ci-management.continuum.intro                               = Dit project gebruikt {Continuum, https://continuum.apache.org/}.
+report.ci-management.cruisecontrol.intro                           = Dit project gebruikt {CruiseControl, https://cruisecontrol.sourceforge.net/}.
 report.ci-management.description                                   = Dit is een link naar de definities van alle continuous integration processen, die code bouwen en testen op een frequente reguliere basis.
 report.ci-management.general.intro                                 = Dit project gebruikt Continuous Integration System.
 report.ci-management.github.intro                                  = Dit project gebruikt {GitHub Actions, https://github.com/features/actions/}.
-report.ci-management.hudson.intro                                  = Dit project gebruikt {Hudson, http://hudson-ci.org/}.
+report.ci-management.hudson.intro                                  = Dit project gebruikt Hudson.
 report.ci-management.jenkins.intro                                 = Dit project gebruikt {Jenkins, https://www.jenkins.io/}.
-report.ci-management.luntbuild.intro                               = Dit project gebruikt {Luntbuild, http://luntbuild.javaforge.com/}.
+report.ci-management.luntbuild.intro                               = Dit project gebruikt {Luntbuild, https://sourceforge.net/p/luntbuild/}.
 report.ci-management.teamcity.intro                                = Dit project gebruikt {TeamCity, https://www.jetbrains.com/teamcity/}.
 report.ci-management.travis.intro                                  = Dit project gebruikt {Travis CI, https://travis-ci.com/}.
 report.dependencies.file.details.columntitle.debuginformation      = Geeft aan of deze afhankelijkheden met debug-informatie gecompileerd zijn.
