--- a/src/main/resources/project-info-reports_pl.properties
+++ b/src/main/resources/project-info-reports_pl.properties
@@ -16,17 +16,17 @@
 # under the License.
 
 report.ci-management.access                                        = Dost\u0119p
-report.ci-management.anthill.intro                                 = Projekt ten u\u017Cywa systemu {Anthill, http://www.anthillpro.com/html/products/anthillos/}.
-report.ci-management.bamboo.intro                                  = Projekt ten u\u017Cywa systemu {Bamboo, http://www.atlassian.com/software/bamboo/}.
-report.ci-management.buildforge.intro                              = Projekt ten u\u017Cywa systemu {Build Forge, http://www-306.ibm.com/software/awdtools/buildforge/enterprise/}.
-report.ci-management.continuum.intro                               = Projekt ten u\u017Cywa systemu {Continuum, http://continuum.apache.org/}.
-report.ci-management.cruisecontrol.intro                           = Projekt ten u\u017Cywa systemu {CruiseControl, http://cruisecontrol.sourceforge.net/}.
+report.ci-management.anthill.intro                                 = Projekt ten u\u017Cywa systemu {Anthill, https://www.ibm.com/mysupport/s/topic/0TO50000000IQPaGAO/anthillpro?language=en_US}.
+report.ci-management.bamboo.intro                                  = Projekt ten u\u017Cywa systemu {Bamboo, https://www.atlassian.com/software/bamboo/}.
+report.ci-management.buildforge.intro                              = Projekt ten u\u017Cywa systemu {Build Forge, https://www.ibm.com/products/rational-build-forge}.
+report.ci-management.continuum.intro                               = Projekt ten u\u017Cywa systemu {Continuum, https://continuum.apache.org/}.
+report.ci-management.cruisecontrol.intro                           = Projekt ten u\u017Cywa systemu {CruiseControl, https://cruisecontrol.sourceforge.net/}.
 report.ci-management.description                                   = Poni\u017Cej znajduje si\u0119 \u0142\u0105cze do definicji wszystkich system\u00F3w Continuous Integration, kt\u00F3re regularnie i cz\u0119sto kompiluj\u0105 i testuj\u0105 kod.
 report.ci-management.general.intro                                 = Projekt ten u\u017Cywa systemu Continuous Integration.
 report.ci-management.github.intro                                  = Projekt ten u\u017Cywa systemu {GitHub Actions, https://github.com/features/actions/}.
-report.ci-management.hudson.intro                                  = Projekt ten u\u017Cywa systemu {Hudson, http://hudson-ci.org/}.
+report.ci-management.hudson.intro                                  = Projekt ten u\u017Cywa systemu Hudson.
 report.ci-management.jenkins.intro                                 = Projekt ten u\u017Cywa systemu {Jenkins, https://www.jenkins.io/}.
-report.ci-management.luntbuild.intro                               = Projekt ten u\u017Cywa systemu {Luntbuild, http://luntbuild.javaforge.com/}.
+report.ci-management.luntbuild.intro                               = Projekt ten u\u017Cywa systemu {Luntbuild, https://sourceforge.net/p/luntbuild/}.
 report.ci-management.teamcity.intro                                = Projekt ten u\u017Cywa systemu {TeamCity, https://www.jetbrains.com/teamcity/}.
 report.ci-management.travis.intro                                  = Projekt ten u\u017Cywa systemu {Travis CI, https://travis-ci.com/}.
 report.ci-management.name                                          = Continuous Integration
@@ -58,15 +58,15 @@ report.dependencies.transitive.nolist                              = \u017Badne 
 report.dependencies.transitive.title                               = Zale\u017Cno\u015Bci przechodnie
 report.index.nodescription                                         = Brak opisu powi\u0105zanego z tym projektem.
 report.index.title                                                 = Witamy na stronach
-report.issue-management.bugzilla.intro                             = Projekt ten korzysta z systemu {Bugzilla, http://www.bugzilla.org/}.
+report.issue-management.bugzilla.intro                             = Projekt ten korzysta z systemu {Bugzilla, https://www.bugzilla.org/}.
 report.issue-management.description                                = Poni\u017Cej znajduje si\u0119 \u0142\u0105cze do systemu \u015Bledzenia zada\u0144 (issue management system) dla tego projektu. Zadania (b\u0142\u0119dy, rozbudowa funkcjonalno\u015Bci, pro\u015Bby o zmiany) mog\u0105 by\u0107 dodawane i wyszukiwane pod podanym adresem.
 report.issue-management.general.intro                              = Projekt ten korzysta z systemu \u015Bledzenia zada\u0144 (Issue Management System) do zarz\u0105dzania swoimi zadaniami.
 report.issue-management.intro                                      = Zdania, b\u0142\u0119dy i pro\u015Bby o now\u0105 funkcjonalno\u015B\u0107 tego projektu powinny by\u0107 zg\u0142aszane przez system \u015Bledzenia zada\u0144 (issue tracking system).
-report.issue-management.jira.intro                                 = Projekt ten korzysta z systemu {JIRA, http://www.atlassian.com/software/jira} - aplikacji (opartej o architektur\u0119 J2EE) do \u015Bledzenia zada\u0144 i zarz\u0105dzania projektami.
+report.issue-management.jira.intro                                 = Projekt ten korzysta z systemu {JIRA, https://www.atlassian.com/software/jira} - aplikacji (opartej o architektur\u0119 J2EE) do \u015Bledzenia zada\u0144 i zarz\u0105dzania projektami.
 report.issue-management.name                                       = System \u015Bledzenia zada\u0144 (Issue Tracking)
 report.issue-management.noissueManagement                          = Nie zdefiniowano systemu \u015Bledzenia zada\u0144. Prosz\u0119 spr\u00F3bowa\u0107 w p\u00F3\u017Aniejszym terminie.
 report.issue-management.overview.title                             = Przegl\u0105d
-report.issue-management.scarab.intro                               = Projekt ten korzysta z systemu {Scarab, http://scarab.tigris.org/}.
+report.issue-management.scarab.intro                               = Projekt ten korzysta z systemu Scarab.
 report.issue-management.title                                      = System \u015Bledzenia zada\u0144 (Issue Tracking)
 report.licenses.description                                        = Poni\u017Cej znajduje si\u0119 \u0142\u0105cze do licencji projektu.
 report.licenses.name                                               = Licencja projektu
@@ -107,7 +107,7 @@ report.scm.general.intro                                           = Projekt ten
 report.scm.name                                                    = Repozytorium z kodem \u017Ar\u00F3d\u0142owym
 report.scm.noscm                                                   = Nie zdefiniowano \u017Cadnego systemu zarz\u0105dania wersjami. Prosz\u0119 spr\u00F3bowa\u0107 w p\u00F3\u017Aniejszym terminie.
 report.scm.overview.title                                          = Przegl\u0105d
-report.scm.svn.intro                                               = Projekt ten korzysta z systemu {Subversion, http://subversion.apache.org/} do zarz\u0105dzania swoim kodem \u017Ar\u00F3d\u0142owym. Informacje o u\u017Cywaniu systemu Subversion mo\u017Cna znale\u017A\u0107 pod adresem {http://svnbook.red-bean.com/, http://svnbook.red-bean.com/}.
+report.scm.svn.intro                                               = Projekt ten korzysta z systemu {Subversion, https://subversion.apache.org/} do zarz\u0105dzania swoim kodem \u017Ar\u00F3d\u0142owym. Informacje o u\u017Cywaniu systemu Subversion mo\u017Cna znale\u017A\u0107 pod adresem {https://svnbook.red-bean.com/, https://svnbook.red-bean.com/}.
 report.scm.title                                                   = Repozytorium kodu \u017Ar\u00F3d\u0142owego
 report.scm.webaccess.nourl                                         = Nie zdefiniowano dost\u0119pu do kodu \u017Ar\u00F3d\u0142owego projektu z poziomu przegl\u0105darki. Prosz\u0119 spr\u00F3bowa\u0107 w p\u00F3\u017Aniejszym terminie.
 report.scm.webaccess.title                                         = Dost\u0119p przez przegl\u0105dark\u0119
