--- a/src/main/resources/project-info-reports_pt.properties
+++ b/src/main/resources/project-info-reports_pt.properties
@@ -16,17 +16,17 @@
 # under the License.
 
 report.ci-management.access                                        = Acesso
-report.ci-management.anthill.intro                                 = Este projecto usa o {Anthill, http://www.anthillpro.com/html/products/anthillos/}.
-report.ci-management.bamboo.intro                                  = Este projecto usa o {Bamboo, http://www.atlassian.com/software/bamboo/}.
-report.ci-management.buildforge.intro                              = Este projecto usa o {Build Forge, http://www-306.ibm.com/software/awdtools/buildforge/enterprise/}.
-report.ci-management.continuum.intro                               = Este projecto usa o {Continuum, http://continuum.apache.org/}.
-report.ci-management.cruisecontrol.intro                           = Este projecto usa o {CruiseControl, http://cruisecontrol.sourceforge.net/}.
+report.ci-management.anthill.intro                                 = Este projecto usa o {Anthill, https://www.ibm.com/mysupport/s/topic/0TO50000000IQPaGAO/anthillpro?language=en_US}.
+report.ci-management.bamboo.intro                                  = Este projecto usa o {Bamboo, https://www.atlassian.com/software/bamboo/}.
+report.ci-management.buildforge.intro                              = Este projecto usa o {Build Forge, https://www.ibm.com/products/rational-build-forge}.
+report.ci-management.continuum.intro                               = Este projecto usa o {Continuum, https://continuum.apache.org/}.
+report.ci-management.cruisecontrol.intro                           = Este projecto usa o {CruiseControl, https://cruisecontrol.sourceforge.net/}.
 report.ci-management.description                                   = Este \u00e9 o endere\u00e7o para a defini\u00e7\u00e3o de todo o processo de integra\u00e7\u00e3o cont\u00ednua que compila e testa o c\u00f3digo de forma frequente e regularmente.
 report.ci-management.general.intro                                 = Este projecto usa um sistema de integra\u00e7\u00e3o cont\u00ednua.
 report.ci-management.github.intro                                  = Este projecto usa o {GitHub Actions, https://github.com/features/actions/}.
-report.ci-management.hudson.intro                                  = Este projecto usa o {Hudson, http://hudson-ci.org/}.
+report.ci-management.hudson.intro                                  = Este projecto usa o Hudson.
 report.ci-management.jenkins.intro                                 = Este projecto usa o {Jenkins, https://www.jenkins.io/}.
-report.ci-management.luntbuild.intro                               = Este projecto usa o {Luntbuild, http://luntbuild.javaforge.com/}.
+report.ci-management.luntbuild.intro                               = Este projecto usa o {Luntbuild, https://sourceforge.net/p/luntbuild/}.
 report.ci-management.teamcity.intro                                = Este projecto usa o {TeamCity, https://www.jetbrains.com/teamcity/}.
 report.ci-management.travis.intro                                  = Este projecto usa o {Travis CI, https://travis-ci.com/}.
 report.ci-management.name                                          = Integra\u00e7\u00e3o Cont\u00ednua
@@ -117,16 +117,16 @@ report.dependency-convergence.stats.modules                        = Numero de s
 report.dependency-convergence.title                                = Converg\u00eancia da Vers\u00e3o da Depend\u00eancia
 report.index.nodescription                                         = Actualmente, n\u00e3o h\u00e1 uma descri\u00e7\u00e3o atribu\u00edda a este projecto.
 report.index.title                                                 = Sobre
-report.issue-management.bugzilla.intro                             = Este projecto usa o {Bugzilla, http://www.bugzilla.org/}.
+report.issue-management.bugzilla.intro                             = Este projecto usa o {Bugzilla, https://www.bugzilla.org/}.
 report.issue-management.custom.intro                               = Este projecto usa o %issueManagementSystem% para gerir os defeitos.
 report.issue-management.description                                = Este \u00e9 o endere\u00e7o para a gest\u00e3o de defeitos deste projecto. Defeitos (bugs, funcionalidades, altera\u00e7\u00f5es) podem ser criadas e pesquisadas.
 report.issue-management.general.intro                              = Este projecto usa um gestor de defeitos para controlar os defeitos.
 report.issue-management.intro                                      = Defeitos, bugs e novas funcionalidades podem ser submetidas para o seguinte sistema de gest\u00e3o de defeitos.
-report.issue-management.jira.intro                                 = Este projecto usa o {JIRA, http://www.atlassian.com/software/jira}.
+report.issue-management.jira.intro                                 = Este projecto usa o {JIRA, https://www.atlassian.com/software/jira}.
 report.issue-management.name                                       = Gestor de Defeitos
 report.issue-management.noissueManagement                          = N\u00e3o est\u00e1 definido nenhum gestor de defeitos. Por favor verifique numa data futura.
 report.issue-management.overview.title                             = Vis\u00e3o Geral
-report.issue-management.scarab.intro                               = Este projecto usa {Scarab, http://scarab.tigris.org/}.
+report.issue-management.scarab.intro                               = Este projecto usa Scarab.
 report.issue-management.title                                      = Gestor de Defeitos
 report.licenses.description                                        = Este \u00e9 o endere\u00e7o para as defini\u00e7\u00f5es das licen\u00e7as do projecto.
 report.licenses.name                                               = Licen\u00e7a do Projecto
@@ -168,7 +168,7 @@ report.scm.general.intro                                           = Este projec
 report.scm.name                                                    = Reposit\u00f3rio
 report.scm.noscm                                                   = Este projecto n\u00e3o tem nenhum reposit\u00f3rio configurado. Por favor verifique novamente numa data futura.
 report.scm.overview.title                                          = Vis\u00e3o Geral
-report.scm.svn.intro                                               = Este projecto usa o {Subversion, http://subversion.apache.org/} para gerir o c\u00f3digo fonte. Informa\u00e7\u00e3o sobre o uso do Subversion pode ser encontrada em {http://svnbook.red-bean.com/, http://svnbook.red-bean.com/}.
+report.scm.svn.intro                                               = Este projecto usa o {Subversion, https://subversion.apache.org/} para gerir o c\u00f3digo fonte. Informa\u00e7\u00e3o sobre o uso do Subversion pode ser encontrada em {https://svnbook.red-bean.com/, https://svnbook.red-bean.com/}.
 report.scm.title                                                   = Reposit\u00f3rio
 report.scm.webaccess.nourl                                         = Este projecto n\u00e3o tem nenhum endere\u00e7o configurado para o reposit\u00f3rio. Por favor verifique novamente numa data futura.
 report.scm.webaccess.title                                         = Acesso pela Web
