--- a/src/main/resources/project-info-reports_pt_BR.properties
+++ b/src/main/resources/project-info-reports_pt_BR.properties
@@ -16,17 +16,17 @@
 # under the License.
 
 report.ci-management.access                                        = Acesso
-report.ci-management.anthill.intro                                 = Este projeto utiliza o {Anthill, http://www.anthillpro.com/html/products/anthillos/}.
-report.ci-management.bamboo.intro                                  = Este projeto utiliza o {Bamboo, http://www.atlassian.com/software/bamboo/}.
-report.ci-management.buildforge.intro                              = Este projeto utiliza o {Build Forge, http://www-306.ibm.com/software/awdtools/buildforge/enterprise/}.
-report.ci-management.continuum.intro                               = Este projeto utiliza o {Continuum, http://continuum.apache.org/}.
-report.ci-management.cruisecontrol.intro                           = Este projeto utiliza o {CruiseControl, http://cruisecontrol.sourceforge.net/}.
+report.ci-management.anthill.intro                                 = Este projeto utiliza o {Anthill, https://www.ibm.com/mysupport/s/topic/0TO50000000IQPaGAO/anthillpro?language=en_US}.
+report.ci-management.bamboo.intro                                  = Este projeto utiliza o {Bamboo, https://www.atlassian.com/software/bamboo/}.
+report.ci-management.buildforge.intro                              = Este projeto utiliza o {Build Forge, https://www.ibm.com/products/rational-build-forge}.
+report.ci-management.continuum.intro                               = Este projeto utiliza o {Continuum, https://continuum.apache.org/}.
+report.ci-management.cruisecontrol.intro                           = Este projeto utiliza o {CruiseControl, https://cruisecontrol.sourceforge.net/}.
 report.ci-management.description                                   = Este \u00e9 o endere\u00e7o para a defini\u00e7\u00e3o de todo o processo de integra\u00e7\u00e3o cont\u00ednua. Na integra\u00e7\u00e3o cont\u00ednua a compila\u00e7\u00e3o, montagem e testes s\u00e3o feitos de forma frequente e constante.
 report.ci-management.general.intro                                 = Este projeto utiliza um sistema de integra\u00e7\u00e3o cont\u00ednua.
 report.ci-management.github.intro                                  = Este projeto utiliza o {GitHub Actions, https://github.com/features/actions/}.
-report.ci-management.hudson.intro                                  = Este projeto utiliza o {Hudson, http://hudson-ci.org/}.
+report.ci-management.hudson.intro                                  = Este projeto utiliza o Hudson.
 report.ci-management.jenkins.intro                                 = Este projeto utiliza o {Jenkins, https://www.jenkins.io/}.
-report.ci-management.luntbuild.intro                               = Este projeto utiliza o {Luntbuild, http://luntbuild.javaforge.com/}.
+report.ci-management.luntbuild.intro                               = Este projeto utiliza o {Luntbuild, https://sourceforge.net/p/luntbuild/}.
 report.ci-management.teamcity.intro                                = Este projeto utiliza o {TeamCity, https://www.jetbrains.com/teamcity/}.
 report.ci-management.travis.intro                                  = Este projeto utiliza o {Travis CI, https://travis-ci.com/}.
 report.ci-management.name                                          = Integra\u00e7\u00e3o Cont\u00ednua
@@ -146,16 +146,16 @@ report.distribution-management.title                               = Ger\u00eanc
 report.distribution-management.value                               = Valor
 report.index.nodescription                                         = Atualmente, n\u00e3o h\u00e1 uma descri\u00e7\u00e3o atribu\u00edda a este projeto.
 report.index.title                                                 = Sobre
-report.issue-management.bugzilla.intro                             = Este projeto utiliza o {Bugzilla, http://www.bugzilla.org/}.
+report.issue-management.bugzilla.intro                             = Este projeto utiliza o {Bugzilla, https://www.bugzilla.org/}.
 report.issue-management.custom.intro                               = Este projeto utiliza o %issueManagementSystem% para gerenciar suas requisi\u00e7\u00f5es.
 report.issue-management.description                                = Este \u00e9 o endere\u00e7o para o controle de requisi\u00e7\u00f5es deste projeto. Requisi\u00e7\u00f5es (defeitos, funcionalidades, requisi\u00e7\u00f5es de altera\u00e7\u00e3o) podem ser criadas e pesquisadas utlizando o endere\u00e7o.
 report.issue-management.general.intro                              = Este projeto utiliza um gerenciador de requisi\u00e7\u00f5es para controlar as requisi\u00e7\u00f5es.
 report.issue-management.intro                                      = Requisi\u00e7\u00f5es, defeitos, e funcionalidades podem ser submetidas para o seguinte sistema de gerenciamento de requisi\u00e7\u00f5es.
-report.issue-management.jira.intro                                 = Este projeto utiliza o {JIRA, http://www.atlassian.com/software/jira}.
+report.issue-management.jira.intro                                 = Este projeto utiliza o {JIRA, https://www.atlassian.com/software/jira}.
 report.issue-management.name                                       = Controle de Requisi\u00e7\u00f5es
 report.issue-management.noissueManagement                          = Nenhum controlador de requisi\u00e7\u00f5es est\u00e1 definido. Por favor verifique numa data futura.
 report.issue-management.overview.title                             = Vis\u00e3o Geral
-report.issue-management.scarab.intro                               = Este projeto utiliza {Scarab, http://scarab.tigris.org/}.
+report.issue-management.scarab.intro                               = Este projeto utiliza Scarab.
 report.issue-management.title                                      = Gerenciador de Requisi\u00e7\u00f5es
 report.licenses.description                                        = Este \u00e9 o endere\u00e7o para a defini\u00e7\u00e3o da licen\u00e7a do projeto.
 report.licenses.name                                               = Licen\u00e7a do Projeto
@@ -198,12 +198,12 @@ report.scm.accessthroughtproxy.svn.intro2                          = H\u00e1 com
 report.scm.accessthroughtproxy.svn.intro3                          = Exemplo: Altere o arquivo 'servers', adicionando algo do tipo :
 report.scm.accessthroughtproxy.title                               = Acesso atrav\u00e9s de um Proxy
 report.scm.anonymousaccess.general.intro                           = Verifique na documenta\u00e7\u00e3o do sistema de controle de configura\u00e7\u00e3o utilizado maiores informa\u00e7\u00f5es a respeito da forma de acesso ao reposit\u00f3rio. O endere\u00e7o de acesso \u00e9:
-report.scm.anonymousaccess.hg.intro                                = O c\u00f3digo pode ser obetido de forma an\u00f4nima do Mercurial com o comando (See {http://www.selenic.com/mercurial/hg.1.html#clone,http://www.selenic.com/mercurial/hg.1.html#clone}):
+report.scm.anonymousaccess.hg.intro                                = O c\u00f3digo pode ser obetido de forma an\u00f4nima do Mercurial com o comando (See {https://www.selenic.com/mercurial/hg.1.html#clone,https://www.selenic.com/mercurial/hg.1.html#clone}):
 report.scm.anonymousaccess.svn.intro                               = O c\u00f3digo fonte pode ser acessado anonimamente no Subversion utilizando este comando:
 report.scm.anonymousaccess.title                                   = Acesso an\u00f4nimo
 report.scm.description                                             = Este \u00e9 um endere\u00e7o para o reposit\u00f3rio que voc\u00ea poder\u00e1 visualizar utilizando um navegador.
 report.scm.devaccess.general.intro                                 = Verifique na documenta\u00e7\u00e3o do gerenciador de configura\u00e7\u00e3o utilizado a forma de acesso para retirada do c\u00f3digo. A URL de conex\u00e3o \u00e9:
-report.scm.devaccess.hg.intro                                      = Apenas os desenvolvedores do projeto podem acessar a \u00e1rvore Mercurial por este m\u00e9todo (See {http://www.selenic.com/mercurial/hg.1.html#clone,http://www.selenic.com/mercurial/hg.1.html#clone}).
+report.scm.devaccess.hg.intro                                      = Apenas os desenvolvedores do projeto podem acessar a \u00e1rvore Mercurial por este m\u00e9todo (See {https://www.selenic.com/mercurial/hg.1.html#clone,https://www.selenic.com/mercurial/hg.1.html#clone}).
 report.scm.devaccess.svn.intro1.https                              = Todos podem acessar o reposit\u00f3rio do Subversion via HTTPS, mas os desenvolvedores devem fazer o checkout via HTTPS.
 report.scm.devaccess.svn.intro1.other                              = Os desenvolvedores devem fazer o checkout.
 report.scm.devaccess.svn.intro1.svn                                = Os desenvolvedores devem fazer o checkout via SVN.
@@ -211,11 +211,11 @@ report.scm.devaccess.svn.intro1.svnssh                             = Os desenvol
 report.scm.devaccess.svn.intro2                                    = Para confirmar mudan\u00e7as no reposit\u00f3rio, execute o comando abaixo (o Subversion ir\u00e1 perguntar pela sua senha)
 report.scm.devaccess.title                                         = Acesso para Desenvolvedores
 report.scm.general.intro                                           = Este projeto utiliza o Source Content Management System para gerenciar o c\u00f3digo fonte.
-report.scm.hg.intro                                                = Este projeto utiliza {Mercurial, https://www.mercurial-scm.org/} para gerenciar seu c\u00f3digo fonte. Instru\u00e7\u00f5es de utiliza\u00e7\u00e3o do Mercurial podem ser encontradas em {http://hgbook.red-bean.com/read/, http://hgbook.red-bean.com/read/}.
+report.scm.hg.intro                                                = Este projeto utiliza {Mercurial, https://www.mercurial-scm.org/} para gerenciar seu c\u00f3digo fonte. Instru\u00e7\u00f5es de utiliza\u00e7\u00e3o do Mercurial podem ser encontradas em {https://hgbook.red-bean.com/read/, https://hgbook.red-bean.com/read/}.
 report.scm.name                                                    = Reposit\u00f3rio de fontes
 report.scm.noscm                                                   = Este projeto n\u00e3o cadastrou um sistema de controle de configura\u00e7\u00e3o. Daqui a um tempo, verifique novamente esta p\u00e1gina.
 report.scm.overview.title                                          = Vis\u00e3o Geral
-report.scm.svn.intro                                               = Este projeto utiliza o {Subversion, http://subversion.apache.org/} para gerenciar o c\u00f3digo fonte. Informa\u00e7\u00f5es a respeito do uso do Subversion pode ser encontrado em {http://svnbook.red-bean.com/, http://svnbook.red-bean.com/}.
+report.scm.svn.intro                                               = Este projeto utiliza o {Subversion, https://subversion.apache.org/} para gerenciar o c\u00f3digo fonte. Informa\u00e7\u00f5es a respeito do uso do Subversion pode ser encontrado em {https://svnbook.red-bean.com/, https://svnbook.red-bean.com/}.
 report.scm.title                                                   = Reposit\u00f3rio do Fonte
 report.scm.webaccess.nourl                                         = O endere\u00e7o de acesso ao reposit\u00f3rio do c\u00f3digo fonte n\u00e3o foi cadastrado pelo projeto. Verifique novamente mais tarde.
 report.scm.webaccess.title                                         = Acesso pela Internet
