--- a/src/main/resources/project-info-reports_zh_CN.properties
+++ b/src/main/resources/project-info-reports_zh_CN.properties
@@ -16,17 +16,17 @@
 # under the License.
 
 report.ci-management.access                                        = \u8BBF\u95EE
-report.ci-management.anthill.intro                                 = \u672C\u9879\u76EE\u4F7F\u7528  {Anthill, http://www.anthillpro.com/html/products/anthillos/}.
-report.ci-management.bamboo.intro                                  = \u672C\u9879\u76EE\u4F7F\u7528 {Bamboo, http://www.atlassian.com/software/bamboo/}.
-report.ci-management.buildforge.intro                              = \u672C\u9879\u76EE\u4F7F\u7528 {Build Forge, http://www-306.ibm.com/software/awdtools/buildforge/enterprise/}.
-report.ci-management.continuum.intro                               = \u672C\u9879\u76EE\u4F7F\u7528 {Continuum, http://continuum.apache.org/}.
-report.ci-management.cruisecontrol.intro                           = \u672C\u9879\u76EE\u4F7F\u7528 {CruiseControl, http://cruisecontrol.sourceforge.net/}.
+report.ci-management.anthill.intro                                 = \u672C\u9879\u76EE\u4F7F\u7528  {Anthill, https://www.ibm.com/mysupport/s/topic/0TO50000000IQPaGAO/anthillpro?language=en_US}.
+report.ci-management.bamboo.intro                                  = \u672C\u9879\u76EE\u4F7F\u7528 {Bamboo, https://www.atlassian.com/software/bamboo/}.
+report.ci-management.buildforge.intro                              = \u672C\u9879\u76EE\u4F7F\u7528 {Build Forge, https://www.ibm.com/products/rational-build-forge}.
+report.ci-management.continuum.intro                               = \u672C\u9879\u76EE\u4F7F\u7528 {Continuum, https://continuum.apache.org/}.
+report.ci-management.cruisecontrol.intro                           = \u672C\u9879\u76EE\u4F7F\u7528 {CruiseControl, https://cruisecontrol.sourceforge.net/}.
 report.ci-management.description                                   = \u6301\u7EED\u96C6\u6210\u662F\u4EE5\u4E00\u5B9A\u7684\u9891\u7387\u548C\u56FA\u5B9A\u7684\u57FA\u7840\u8FDB\u884C\u4EE3\u7801\u6784\u5EFA\u548C\u6D4B\u8BD5\u7684\u8FC7\u7A0B\uFF0C\u8FD9\u91CC\u5217\u51FA\u4E86\u6240\u6709\u7684\u6301\u7EED\u96C6\u6210\u8FC7\u7A0B\u3002
 report.ci-management.general.intro                                 = \u672C\u9879\u76EE\u4F7F\u7528\u6301\u7EED\u96C6\u6210\u7CFB\u7EDF\u3002
 report.ci-management.github.intro                                  = \u672C\u9879\u76EE\u4F7F\u7528 {GitHub Actions, https://github.com/features/actions/}.
-report.ci-management.hudson.intro                                  = \u672C\u9879\u76EE\u4F7F\u7528 {Hudson, http://hudson-ci.org/}.
+report.ci-management.hudson.intro                                  = \u672C\u9879\u76EE\u4F7F\u7528 Hudson.
 report.ci-management.jenkins.intro                                 = \u672C\u9879\u76EE\u4F7F\u7528 {Jenkins, https://www.jenkins.io/}.
-report.ci-management.luntbuild.intro                               = \u672C\u9879\u76EE\u4F7F\u7528 {Luntbuild, http://luntbuild.javaforge.com/}.
+report.ci-management.luntbuild.intro                               = \u672C\u9879\u76EE\u4F7F\u7528 {Luntbuild, https://sourceforge.net/p/luntbuild/}.
 report.ci-management.teamcity.intro                                = \u672C\u9879\u76EE\u4F7F\u7528 {TeamCity, https://www.jetbrains.com/teamcity/}.
 report.ci-management.travis.intro                                  = \u672C\u9879\u76EE\u4F7F\u7528 {Travis CI, https://travis-ci.com/}.
 report.ci-management.name                                          = \u6301\u7EED\u96C6\u6210
@@ -130,17 +130,17 @@ report.dependency-convergence.title                                = \u4F9D\u8D5
 report.dependency-info.description                                 = \u672C\u6587\u6863\u63CF\u8FF0\u4E86\u5982\u4F55\u4F7F\u7528\u5404\u79CD\u4F9D\u8D56\u9879\u7BA1\u7406\u5DE5\u5177\u5C06\u6B64\u9879\u76EE\u4F5C\u4E3A\u4F9D\u8D56\u9879\u3002
 report.index.nodescription                                         = \u76EE\u524D\u6CA1\u6709\u5BF9\u672C\u9879\u76EE\u7684\u63CF\u8FF0\u3002
 report.index.title                                                 = \u6B22\u8FCE\u6765\u5230
-report.issue-management.bugzilla.intro                             = \u672C\u9879\u76EE\u4F7F\u7528 {Bugzilla, http://www.bugzilla.org/}.
+report.issue-management.bugzilla.intro                             = \u672C\u9879\u76EE\u4F7F\u7528 {Bugzilla, https://www.bugzilla.org/}.
 report.issue-management.custom.intro                               = \u672C\u9879\u76EE\u4F7F\u7528%issueManagementSystem%\u7BA1\u7406\u95EE\u9898\u3002
 report.issue-management.description                                = \u8FD9\u662F\u672C\u9879\u76EE\u4E2D\u7684\u95EE\u9898\u7BA1\u7406\u7CFB\u7EDF\u7684\u94FE\u63A5\u3002\u7528\u6237\u53EF\u4EE5\u5728\u8FD9\u91CC\u8FDB\u884C\u95EE\u9898(\u6545\u969C\u3001\u7279\u6027\u3001\u53D8\u66F4\u8BF7\u6C42)\u7684\u521B\u5EFA\u548C\u67E5\u8BE2\u3002
 report.issue-management.general.intro                              = \u672C\u9879\u76EE\u4F7F\u7528\u95EE\u9898\u7BA1\u7406\u7CFB\u7EDF\u7BA1\u7406\u9879\u76EE\u4E2D\u7684\u95EE\u9898\u3002
-report.issue-management.github.intro                               = \u672C\u9879\u76EE\u4F7F\u7528 {GitHub, http://github.com/}.
+report.issue-management.github.intro                               = \u672C\u9879\u76EE\u4F7F\u7528 {GitHub, https://github.com/}.
 report.issue-management.intro                                      = \u95EE\u9898\u3001\u6545\u969C\u548C\u65B0\u7279\u6027\u8BF7\u6C42\u8BF7\u901A\u8FC7\u4E0B\u8FF0\u7684\u672C\u9879\u76EE\u7684\u95EE\u9898\u8DDF\u8E2A\u7CFB\u7EDF\u63D0\u4EA4\u3002
-report.issue-management.jira.intro                                 = \u672C\u9879\u76EE\u4F7F\u7528{JIRA, http://www.atlassian.com/software/jira}\u8FD9\u4E00\u57FA\u4E8EJ2EE\u7684\u95EE\u9898\u8DDF\u8E2A\u548C\u9879\u76EE\u7BA1\u7406\u7CFB\u7EDF\u3002
+report.issue-management.jira.intro                                 = \u672C\u9879\u76EE\u4F7F\u7528{JIRA, https://www.atlassian.com/software/jira}\u8FD9\u4E00\u57FA\u4E8EJ2EE\u7684\u95EE\u9898\u8DDF\u8E2A\u548C\u9879\u76EE\u7BA1\u7406\u7CFB\u7EDF\u3002
 report.issue-management.name                                       = \u95EE\u9898\u8DDF\u8E2A
 report.issue-management.noissueManagement                          = \u6CA1\u6709\u5B9A\u4E49\u95EE\u9898\u7BA1\u7406\u7CFB\u7EDF\u3002\u8BF7\u8FC7\u4E00\u6BB5\u65F6\u95F4\u518D\u67E5\u770B\u3002
 report.issue-management.overview.title                             = \u6982\u8FF0
-report.issue-management.scarab.intro                               = \u672C\u9879\u76EE\u4F7F\u7528 {Scarab, http://scarab.tigris.org/}\u3002
+report.issue-management.scarab.intro                               = \u672C\u9879\u76EE\u4F7F\u7528 Scarab\u3002
 report.issue-management.title                                      = \u95EE\u9898\u8DDF\u8E2A
 report.licenses.description                                        = \u8FD9\u662F\u5173\u4E8E\u672C\u9879\u76EE\u8BB8\u53EF\u8BC1\u7684\u5B9A\u4E49\u3002
 report.licenses.multiple                                           = \u8fd9\u4e2a\u9879\u76ee\u4e0b\u63d0\u4f9b\u591a\u4e2a\u8bb8\u53ef\u8bc1\u003a
@@ -172,13 +172,13 @@ report.scm.accessthroughtproxy.svn.intro3                          = \u793A\u4F8
 report.scm.accessthroughtproxy.title                               = \u901A\u8FC7\u4EE3\u7406\u8BBF\u95EE
 report.scm.anonymousaccess.general.intro                           = \u8BF7\u53C2\u8003\u4F7F\u7528\u7684SCM\u4EE5\u83B7\u5F97\u66F4\u591A\u7684\u533F\u540D\u68C0\u51FA\u7684\u4FE1\u606F\u3002SCM\u8FDE\u63A5\u7684url\u662F\uFF1A
 report.scm.anonymousaccess.git.intro                               = \u53EF\u4EE5\u4F7F\u7528\u6B64\u547D\u4EE4\u4ECE Git \u533F\u540D\u7B7E\u51FA\u6E90\u4EE3\u7801(\u53C2\u89C1 {https://git-scm.com/docs/git-clone,https://git-scm.com/docs/git-clone}):
-report.scm.anonymousaccess.hg.intro                                = The source can be checked out anonymously from Mercurial with this command (\u53C2\u89C1 {http://www.selenic.com/mercurial/hg.1.html#clone,http://www.selenic.com/mercurial/hg.1.html#clone}):
+report.scm.anonymousaccess.hg.intro                                = The source can be checked out anonymously from Mercurial with this command (\u53C2\u89C1 {https://www.selenic.com/mercurial/hg.1.html#clone,https://www.selenic.com/mercurial/hg.1.html#clone}):
 report.scm.anonymousaccess.svn.intro                               = \u901A\u8FC7\u4EE5\u4E0B\u547D\u4EE4\u53EF\u4EE5\u4ECESubversion\u533F\u540D\u68C0\u51FA\u6E90\u4EE3\u7801\uFF1A
 report.scm.anonymousaccess.title                                   = \u533F\u540D\u8BBF\u95EE
 report.scm.description                                             = \u8FD9\u662F\u4E00\u4E2A\u5728\u7EBF\u4EE3\u7801\u5E93,\u5B83\u53EF\u4EE5\u901A\u8FC7Web\u6D4F\u89C8\u5668\u8FDB\u884C\u67E5\u770B.
 report.scm.devaccess.general.intro                                 = \u8BF7\u53C2\u8003\u4F7F\u7528\u7684SCM\u7684\u6587\u6863\u83B7\u5F97\u66F4\u591A\u7684\u5173\u4E8E\u5F00\u53D1\u4EBA\u5458\u68C0\u51FA\u4EE3\u7801\u7684\u4FE1\u606F\u3002SCM\u8FDE\u63A5\u7684url\u662F\uFF1A
 report.scm.devaccess.git.intro                                     = \u53EA\u6709\u9879\u76EE\u5F00\u53D1\u4EBA\u5458\u80FD\u591F\u901A\u8FC7\u8FD9\u4E00\u65B9\u6CD5\u8BBF\u95EEGit\u9879\u76EE\u6811\u3002 (\u53C2\u89C1 {https://git-scm.com/docs/git-clone,https://git-scm.com/docs/git-clone}).
-report.scm.devaccess.hg.intro                                      = \u53EA\u6709\u9879\u76EE\u5F00\u53D1\u4EBA\u5458\u80FD\u591F\u901A\u8FC7\u8FD9\u4E00\u65B9\u6CD5\u8BBF\u95EEMercurial\u9879\u76EE\u6811\u3002 (\u53C2\u89C1 {http://www.selenic.com/mercurial/hg.1.html#clone,http://www.selenic.com/mercurial/hg.1.html#clone}).
+report.scm.devaccess.hg.intro                                      = \u53EA\u6709\u9879\u76EE\u5F00\u53D1\u4EBA\u5458\u80FD\u591F\u901A\u8FC7\u8FD9\u4E00\u65B9\u6CD5\u8BBF\u95EEMercurial\u9879\u76EE\u6811\u3002 (\u53C2\u89C1 {https://www.selenic.com/mercurial/hg.1.html#clone,https://www.selenic.com/mercurial/hg.1.html#clone}).
 report.scm.devaccess.svn.intro1.https                              = \u4EFB\u4F55\u4EBA\u90FD\u53EF\u4EE5\u901A\u8FC7HTTPS\u8BBF\u95EESubversion\u7684\u4EE3\u7801\u5E93\uFF0C\u4F46\u662F\u63D0\u4EA4\u8005\u5FC5\u987B\u901A\u8FC7HTTPS\u4ECESubversion\u4EE3\u7801\u5E93\u4E2D\u68C0\u51FA\u4EE3\u7801\u3002
 report.scm.devaccess.svn.intro1.other                              = \u4EFB\u4F55\u4EBA\u90FD\u53EF\u4EE5\u901A\u8FC7\u8BBF\u95EESubversion\u7684\u4EE3\u7801\u5E93\uFF0C\u4F46\u662F\u63D0\u4EA4\u8005\u5FC5\u987B\u901A\u8FC7\u4ECESubversion\u4EE3\u7801\u5E93\u4E2D\u68C0\u51FA\u4EE3\u7801\u3002
 report.scm.devaccess.svn.intro1.svn                                = \u4EFB\u4F55\u4EBA\u90FD\u53EF\u4EE5\u901A\u8FC7SVN\u8BBF\u95EESubversion\u7684\u4EE3\u7801\u5E93\uFF0C\u4F46\u662F\u63D0\u4EA4\u8005\u5FC5\u987B\u901A\u8FC7SVN\u4ECESubversion\u4EE3\u7801\u5E93\u4E2D\u68C0\u51FA\u4EE3\u7801\u3002
@@ -190,8 +190,8 @@ report.scm.name                                                    = \u6E90\u4EE
 report.scm.noscm                                                   = \u672C\u9879\u76EE\u6CA1\u6709\u5B9A\u4E49\u6E90\u4EE3\u7801\u914D\u7F6E\u7BA1\u7406\u7CFB\u7EDF\u3002\u8BF7\u8FC7\u4E00\u6BB5\u65F6\u95F4\u518D\u67E5\u770B\u3002
 report.scm.overview.title                                          = \u6982\u8FF0
 report.scm.git.intro                                               = \u672C\u9879\u76EE\u4F7F\u7528 {Git, https://git-scm.com/} \u7BA1\u7406\u6E90\u4EE3\u7801 \u5173\u4E8EGit\u7684\u7B80\u4ECB\u53EF\u4EE5\u5728 {https://git-scm.com/doc,https://git-scm.com/doc}\u627E\u5230\u3002
-report.scm.hg.intro                                                = \u672C\u9879\u76EE\u4F7F\u7528 {Mercurial, https://www.mercurial-scm.org/} \u7BA1\u7406\u6E90\u4EE3\u7801 \u5173\u4E8EMercurial\u7684\u7B80\u4ECB\u53EF\u4EE5\u5728 {http://hgbook.red-bean.com/read/, http://hgbook.red-bean.com/read/}.
-report.scm.svn.intro                                               = \u672C\u9879\u76EE\u4F7F\u7528{Subversion, http://subversion.apache.org/}\u7BA1\u7406\u6E90\u4EE3\u7801\u3002\u5173\u4E8ESubversion\u7684\u7B80\u4ECB\u53EF\u4EE5\u5728{http://svnbook.red-bean.com/, http://svnbook.red-bean.com/}\u627E\u5230\u3002
+report.scm.hg.intro                                                = \u672C\u9879\u76EE\u4F7F\u7528 {Mercurial, https://www.mercurial-scm.org/} \u7BA1\u7406\u6E90\u4EE3\u7801 \u5173\u4E8EMercurial\u7684\u7B80\u4ECB\u53EF\u4EE5\u5728 {https://hgbook.red-bean.com/read/, https://hgbook.red-bean.com/read/}.
+report.scm.svn.intro                                               = \u672C\u9879\u76EE\u4F7F\u7528{Subversion, https://subversion.apache.org/}\u7BA1\u7406\u6E90\u4EE3\u7801\u3002\u5173\u4E8ESubversion\u7684\u7B80\u4ECB\u53EF\u4EE5\u5728{https://svnbook.red-bean.com/, https://svnbook.red-bean.com/}\u627E\u5230\u3002
 report.scm.title                                                   = \u6E90\u4EE3\u7801\u5E93
 report.scm.webaccess.nourl                                         = \u672C\u9879\u76EE\u4E2D\u6CA1\u6709\u5217\u51FA\u5728\u7EBF\u6E90\u4EE3\u7801\u5E93\u3002\u8BF7\u8FC7\u4E00\u6BB5\u65F6\u95F4\u518D\u67E5\u770B\u3002
 report.scm.webaccess.title                                         = Web\u8BBF\u95EE
