--- a/src/main/resources/project-info-reports_zh_TW.properties
+++ b/src/main/resources/project-info-reports_zh_TW.properties
@@ -16,17 +16,17 @@
 # under the License.
 
 report.ci-management.access                                        = \u5b58\u53d6 (Access)
-report.ci-management.anthill.intro                                 = \u672c\u5c08\u6848\u4f7f\u7528 {Anthill, http://www.anthillpro.com/html/products/anthillos/}\u3002
-report.ci-management.bamboo.intro                                  = \u672c\u5c08\u6848\u4f7f\u7528 {Bamboo, http://www.atlassian.com/software/bamboo/}\u3002
-report.ci-management.buildforge.intro                              = \u672c\u5c08\u6848\u4f7f\u7528 {Build Forge, http://www-306.ibm.com/software/awdtools/buildforge/enterprise/}\u3002
-report.ci-management.continuum.intro                               = \u672c\u5c08\u6848\u4f7f\u7528 {Continuum, http://continuum.apache.org/}\u3002
-report.ci-management.cruisecontrol.intro                           = \u672c\u5c08\u6848\u4f7f\u7528 {CruiseControl, http://cruisecontrol.sourceforge.net/}\u3002
+report.ci-management.anthill.intro                                 = \u672c\u5c08\u6848\u4f7f\u7528 {Anthill, https://www.ibm.com/mysupport/s/topic/0TO50000000IQPaGAO/anthillpro?language=en_US}\u3002
+report.ci-management.bamboo.intro                                  = \u672c\u5c08\u6848\u4f7f\u7528 {Bamboo, https://www.atlassian.com/software/bamboo/}\u3002
+report.ci-management.buildforge.intro                              = \u672c\u5c08\u6848\u4f7f\u7528 {Build Forge, https://www.ibm.com/products/rational-build-forge}\u3002
+report.ci-management.continuum.intro                               = \u672c\u5c08\u6848\u4f7f\u7528 {Continuum, https://continuum.apache.org/}\u3002
+report.ci-management.cruisecontrol.intro                           = \u672c\u5c08\u6848\u4f7f\u7528 {CruiseControl, https://cruisecontrol.sourceforge.net/}\u3002
 report.ci-management.description                                   = \u6301\u7e8c\u6574\u5408\u662f\u4ee5\u56fa\u5b9a\u983b\u7387\u70ba\u57fa\u790e\u4f86\u5efa\u69cb\u53ca\u6e2c\u8a66\u7a0b\u5f0f\u78bc\u7684\u904e\u7a0b\uff0c\u6b64\u9023\u7d50\u5217\u51fa\u6240\u6709\u548c\u6301\u7e8c\u6574\u5408\u904e\u7a0b\u76f8\u95dc\u4e4b\u5b9a\u7fa9\u3002
 report.ci-management.general.intro                                 = \u672c\u5c08\u6848\u4f7f\u7528\u6301\u7e8c\u6574\u5408\u7cfb\u7d71 (Continuous Integration System)\u3002
 report.ci-management.github.intro                                  = \u672C\u5C08\u6848\u4F7F\u7528 {GitHub Actions, https://github.com/features/actions/}\u3002
-report.ci-management.hudson.intro                                  = \u672c\u5c08\u6848\u4f7f\u7528 {Hudson, http://hudson-ci.org/}\u3002
+report.ci-management.hudson.intro                                  = \u672c\u5c08\u6848\u4f7f\u7528 Hudson\u3002
 report.ci-management.jenkins.intro                                 = \u672c\u5c08\u6848\u4f7f\u7528 {Jenkins, https://www.jenkins.io/}\u3002
-report.ci-management.luntbuild.intro                               = \u672c\u5c08\u6848\u4f7f\u7528 {Luntbuild, http://luntbuild.javaforge.com/}\u3002
+report.ci-management.luntbuild.intro                               = \u672c\u5c08\u6848\u4f7f\u7528 {Luntbuild, https://sourceforge.net/p/luntbuild/}\u3002
 report.ci-management.teamcity.intro                                = \u672c\u5c08\u6848\u4f7f\u7528 {TeamCity, https://www.jetbrains.com/teamcity/}\u3002
 report.ci-management.travis.intro                                  = \u672c\u5c08\u6848\u4f7f\u7528 {Travis CI, https://travis-ci.com/}\u3002
 report.ci-management.name                                          = \u6301\u7e8c\u6574\u5408 (Continuous Integration)
@@ -113,16 +113,16 @@ report.dependency-convergence.stats.modules                        = \u5b50\u5c0
 report.dependency-convergence.title                                = \u53cd\u61c9\u5806\u5f0f\u4f9d\u8cf4\u805a\u5408\u6027 (Reactor Dependency Convergence)
 report.index.nodescription                                         = \u73fe\u5728\u6c92\u6709\u548c\u672c\u5c08\u6848\u76f8\u95dc\u7684\u4efb\u4f55\u63cf\u8ff0\u3002
 report.index.title                                                 = \u95dc\u65bc (About)
-report.issue-management.bugzilla.intro                             = \u672c\u5c08\u6848\u4f7f\u7528 {Bugzilla, http://www.bugzilla.org/}\u3002
+report.issue-management.bugzilla.intro                             = \u672c\u5c08\u6848\u4f7f\u7528 {Bugzilla, https://www.bugzilla.org/}\u3002
 report.issue-management.custom.intro                               = \u672c\u5c08\u6848\u4f7f\u7528 %issueManagementSystem% \u9032\u884c\u5c08\u6848\u672c\u8eab\u554f\u984c (issues) \u7684\u7ba1\u7406\u3002
 report.issue-management.description                                = \u6b64\u70ba\u672c\u5c08\u6848\u554f\u984c\u7ba1\u7406\u7cfb\u7d71 (Issue Management System) \u7684\u9023\u7d50\u3002\u53ef\u4ee5\u4f7f\u7528\u6b64\u9023\u7d50\u4f86\u7522\u751f\u53ca\u67e5\u8a62\u554f\u984c (issues) (\u7f3a\u9677 (bugs), \u529f\u80fd (features), \u8b8a\u66f4\u9700\u6c42 (change requests))\u3002
 report.issue-management.general.intro                              = \u672c\u5c08\u6848\u4f7f\u7528\u554f\u984c\u7ba1\u7406\u7cfb\u7d71 (Issue Management System) \u9032\u884c\u5c08\u6848\u672c\u8eab\u554f\u984c (issues) \u7684\u7ba1\u7406\u3002
 report.issue-management.intro                                      = \u554f\u984c (Issues)\u3001\u7f3a\u9677 (bugs) \u53ca\u529f\u80fd\u9700\u6c42 (feature requests) \u61c9\u88ab\u63d0\u4ea4\u81f3\u672c\u5c08\u6848\u6240\u4f7f\u7528\u7684\u554f\u984c\u8ffd\u8e64\u7cfb\u7d71 (Issue Tracking System) \u4e2d\u3002
-report.issue-management.jira.intro                                 = \u672c\u5c08\u6848\u4f7f\u7528 {JIRA, http://www.atlassian.com/software/jira} \u4e00\u500b J2EE-based\u3001\u554f\u984c\u8ffd\u8e64 (issue tracking) \u53ca\u5c08\u6848\u7ba1\u7406\u61c9\u7528\u7a0b\u5f0f\u3002
+report.issue-management.jira.intro                                 = \u672c\u5c08\u6848\u4f7f\u7528 {JIRA, https://www.atlassian.com/software/jira} \u4e00\u500b J2EE-based\u3001\u554f\u984c\u8ffd\u8e64 (issue tracking) \u53ca\u5c08\u6848\u7ba1\u7406\u61c9\u7528\u7a0b\u5f0f\u3002
 report.issue-management.name                                       = \u554f\u984c\u8ffd\u8e64 (Issue Tracking)
 report.issue-management.noissueManagement                          = \u672c\u5c08\u6848\u672a\u5b9a\u7fa9\u554f\u984c\u7ba1\u7406\u7cfb\u7d71 (Issue Management System)\u3002\u8acb\u7a0d\u5f8c\u518d\u67e5\u770b\u3002
 report.issue-management.overview.title                             = \u6982\u8981 (Overview)
-report.issue-management.scarab.intro                               = \u672c\u5c08\u6848\u4f7f\u7528 {Scarab, http://scarab.tigris.org/}\u3002
+report.issue-management.scarab.intro                               = \u672c\u5c08\u6848\u4f7f\u7528 Scarab\u3002
 report.issue-management.title                                      = \u554f\u984c\u8ffd\u8e64 (Issue Tracking)
 report.licenses.description                                        = \u6b64\u70ba\u5c08\u6848\u6388\u6b0a\u8a31\u53ef (Project License) \u5b9a\u7fa9\u8cc7\u8a0a\u7684\u9023\u7d50\u3002
 report.licenses.name                                               = \u5c08\u6848\u6388\u6b0a\u8a31\u53ef (Project License)
@@ -164,7 +164,7 @@ report.scm.general.intro                                           = \u672c\u5c0
 report.scm.name                                                    = \u539f\u59cb\u78bc\u8caf\u85cf\u5eab (Source Repository)
 report.scm.noscm                                                   = \u672c\u5c08\u6848\u672a\u539f\u59cb\u78bc\u914d\u7f6e\u7ba1\u7406\u7cfb\u7d71 (Source Configuration Management System)\u3002\u8acb\u7a0d\u5f8c\u518d\u67e5\u770b\u3002
 report.scm.overview.title                                          = \u6982\u8981 (Overview)
-report.scm.svn.intro                                               = \u672c\u5c08\u6848\u4f7f\u7528 {Subversion, http://subversion.apache.org/} \u4f86\u9032\u884c\u539f\u59cb\u78bc\u7684\u7ba1\u7406\u3002\u95dc\u65bc\u5982\u4f55\u4f7f\u7528 Subversion \u7684\u76f8\u95dc\u6307\u5f15\u53ef\u4ee5\u53c3\u8003 {http://svnbook.red-bean.com/, http://svnbook.red-bean.com/}\u3002
+report.scm.svn.intro                                               = \u672c\u5c08\u6848\u4f7f\u7528 {Subversion, https://subversion.apache.org/} \u4f86\u9032\u884c\u539f\u59cb\u78bc\u7684\u7ba1\u7406\u3002\u95dc\u65bc\u5982\u4f55\u4f7f\u7528 Subversion \u7684\u76f8\u95dc\u6307\u5f15\u53ef\u4ee5\u53c3\u8003 {https://svnbook.red-bean.com/, https://svnbook.red-bean.com/}\u3002
 report.scm.title                                                   = \u539f\u59cb\u78bc\u8caf\u85cf\u5eab (Source Repository)
 report.scm.webaccess.nourl                                         = \u672c\u5c08\u6848\u6c92\u6709\u4f7f\u7528\u5728\u7dda\u539f\u59cb\u78bc\u8caf\u85cf\u5eab\u3002\u8acb\u7a0d\u5f8c\u518d\u67e5\u770b\u3002
 report.scm.webaccess.title                                         = Web \u5b58\u53d6 (Web Access)
